--- a/cdn/downloads/index.html
+++ b/cdn/downloads/index.html
@@ -12,7 +12,7 @@
 
 <body>
     <div id="container">
-        <h1>cdn.lynnux.xyz/downloads/emotes/doomfist/</h1>
+        <h1>cdn.lynnux.xyz/downloads/</h1>
         <table class="sortable">
             <thead>
                 <tr>
@@ -26,20 +26,20 @@
                 <tr class='directory'>
                     <td><a href='https://lynnux.xyz/' class='name'>...</a></td>
                     <td><a href='https://lynnux.xyz/'>&lt;GO BACK&gt;</a></td>
-                    <td sorttable_customkey='2253'><a href='https://lynnux.xyz/'>N/A</a></td>
-                    <td sorttable_customkey='20190630184359'><a href='https://lynnux.xyz/'>N/A</a></td>
+                    <td sorttable_customkey='1'><a href='https://lynnux.xyz/'>N/A</a></td>
+                    <td sorttable_customkey='1'><a href='https://lynnux.xyz/'>N/A</a></td>
                 </tr>
                 <tr class='directory'>
                     <td><a href='./emotes/' class='name'>emotes</a></td>
                     <td><a href='./emotes/'>&lt;Directory&gt;</a></td>
-                    <td sorttable_customkey='2253'><a href='./emotes/'>N/A</a></td>
-                    <td sorttable_customkey='20190630184359'><a href='./emotes/'>Jul 21 2023 9:55 PM</a></td>
+                    <td sorttable_customkey='2'><a href='./emotes/'>N/A</a></td>
+                    <td sorttable_customkey='2'><a href='./emotes/'>Jul 21 2023 9:55 PM</a></td>
                 </tr>
                 <tr class='directory'>
                     <td><a href='./zip/' class='name'>zip</a></td>
                     <td><a href='./zip/'>&lt;Directory&gt;</a></td>
-                    <td sorttable_customkey='2253'><a href='./zip/'>N/A</a></td>
-                    <td sorttable_customkey='20190630184359'><a href='./zip/'>Jul 21 2023 9:55 PM</a></td>
+                    <td sorttable_customkey='3'><a href='./zip/'>N/A</a></td>
+                    <td sorttable_customkey='3'><a href='./zip/'>Jul 21 2023 9:55 PM</a></td>
                 </tr>
             </tbody>
         </table>
