--- a/cdn/downloads/emotes/doomfist/index.html
+++ b/cdn/downloads/emotes/doomfist/index.html
@@ -6,13 +6,14 @@
     <link rel="shortcut icon" href="./.favicon.ico">
     <title>Directory Contents</title>
 
-    <link rel="stylesheet" href="https://dark-lynn.github.io/style.css">
-    <script src="https://dark-lynn.github.io/sorttable.js"></script>
+    <link rel="stylesheet" href="/style.css">
+    <script src="/sorttable.js"></script>
+    <script src="https://cdn.jsdelivr.net/npm/ionicons@5.5.2/dist/ionicons/ionicons.esm.js" type="module"></script>
 </head>
 
 <body>
     <div id="container">
-        <h1>cdn.lynnux.xyz/downloads/emotes/doomfist/</h1>
+        <h1>/emotes/doomfist/</h1>
         <table class="sortable">
             <thead>
                 <tr>
@@ -26,59 +27,63 @@
                 <tr class='directory'>
                     <td><a href='../' class='name'>...</a></td>
                     <td><a href='../'>&lt;GO BACK&gt;</a></td>
-                    <td sorttable_customkey='2253'><a href='../'>N/A</a></td>
-                    <td sorttable_customkey='20190630184359'><a href='../'>N/A</a></td>
+                    <td sorttable_customkey='1'><a href='../'>N/A</a></td>
+                    <td sorttable_customkey='1'><a href='../'>N/A</a></td>
                 </tr>
                 <tr class='file'>
                     <td><a href='https://cdn.lynnux.xyz/downloads/zip/doomfist.zip' class='name'>Download FULL pack</a></td>
                     <td><a href='https://cdn.lynnux.xyz/downloads/zip/doomfist.zip'>ZIP file</a></td>
-                    <td sorttable_customkey='2253'><a href='https://cdn.lynnux.xyz/downloads/zip/doomfist.zip'>9.95 MB</a></td>
-                    <td sorttable_customkey='20190630184359'><a href='https://cdn.lynnux.xyz/downloads/zip/doomfist.zip'>Jul 21 2023 9:55 PM</a></td>
+                    <td sorttable_customkey='9950'><a href='https://cdn.lynnux.xyz/downloads/zip/doomfist.zip'>9.95 MB</a></td>
+                    <td sorttable_customkey='1689969300'><a href='https://cdn.lynnux.xyz/downloads/zip/doomfist.zip'>Jul 21 2023 9:55 PM</a></td>
                 </tr>
                 <tr class='directory'>
                     <td><a href='./28x28/' class='name'>28x28</a></td>
                     <td><a href='./28x28/'>&lt;Directory&gt;</a></td>
-                    <td sorttable_customkey='2253'><a href='./28x28/'>N/A</a></td>
-                    <td sorttable_customkey='20190630184359'><a href='./28x28/'>Jul 21 2023 9:55 PM</a></td>
+                    <td sorttable_customkey='2'><a href='./28x28/'>N/A</a></td>
+                    <td sorttable_customkey='1689969300'><a href='./28x28/'>Jul 21 2023 9:55 PM</a></td>
                 </tr>
                 <tr class='directory'>
                     <td><a href='./56x56/' class='name'>56x56</a></td>
                     <td><a href='./56x56/'>&lt;Directory&gt;</a></td>
-                    <td sorttable_customkey='2253'><a href='./56x56/'>N/A</a></td>
-                    <td sorttable_customkey='20190630184359'><a href='./56x56/'>Jul 21 2023 9:55 PM</a></td>
+                    <td sorttable_customkey='2'><a href='./56x56/'>N/A</a></td>
+                    <td sorttable_customkey='1689969300'><a href='./56x56/'>Jul 21 2023 9:55 PM</a></td>
                 </tr>
                 <tr class='directory'>
                     <td><a href='./112x112/' class='name'>112x112</a></td>
                     <td><a href='./112x112/'>&lt;Directory&gt;</a></td>
-                    <td sorttable_customkey='2253'><a href='./112x112/'>N/A</a></td>
-                    <td sorttable_customkey='20190630184359'><a href='./112x112/'>Jul 21 2023 9:55 PM</a></td>
+                    <td sorttable_customkey='2'><a href='./112x112/'>N/A</a></td>
+                    <td sorttable_customkey='1689969300'><a href='./112x112/'>Jul 21 2023 9:55 PM</a></td>
                 </tr>
                 <tr class='directory'>
                     <td><a href='./1000x1000/' class='name'>1000x1000</a></td>
                     <td><a href='./1000x1000/'>&lt;Directory&gt;</a></td>
-                    <td sorttable_customkey='2253'><a href='./1000x1000/'>N/A</a></td>
-                    <td sorttable_customkey='20190630184359'><a href='./1000x1000/'>Jul 21 2023 9:55 PM</a></td>
+                    <td sorttable_customkey='2'><a href='./1000x1000/'>N/A</a></td>
+                    <td sorttable_customkey='1689969300'><a href='./1000x1000/'>Jul 21 2023 9:55 PM</a></td>
                 </tr>
                 <tr class='directory'>
                     <td><a href='./Animated/' class='name'>Animated</a></td>
                     <td><a href='./Animated/'>&lt;Directory&gt;</a></td>
                     <td sorttable_customkey='2253'><a href='./Animated/'>N/A</a></td>
-                    <td sorttable_customkey='20190630184359'><a href='./Animated/'>Jul 21 2023 9:55 PM</a></td>
+                    <td sorttable_customkey='1689969300'><a href='./Animated/'>Jul 21 2023 9:55 PM</a></td>
                 </tr>
                 <tr class='file'>
-                    <td><a href='./Template.jpg/' class='name'>Template.jpg</a></td>
-                    <td><a href='./Template.jpg/'>JPG file</a></td>
-                    <td sorttable_customkey='2253'><a href='./Doomfist.zip/'>786 KB</a></td>
-                    <td sorttable_customkey='20190630184359'><a href='./Doomfist.zip/'>Jul 21 2023 9:55 PM</a></td>
+                    <td><a href='./Template.jpg' class='name'>Template.jpg</a></td>
+                    <td><a href='./Template.jpg'>JPG file</a></td>
+                    <td sorttable_customkey='786'><a href='./Template.jpg'>786 KB</a></td>
+                    <td sorttable_customkey='1689969300'><a href='./Template.jpg'>Jul 21 2023 9:55 PM</a></td>
                 </tr>
                 <tr class='file'>
                     <td><a href='./Template_Colored.jpg' class='name'>Template_Colored.jpg</a></td>
                     <td><a href='./Template_Colored.jpg'>JPG file</a></td>
-                    <td sorttable_customkey='29460'><a href='./Template_Colored.jpg'>784 KB</a></td>
-                    <td sorttable_customkey='20190630184359'><a href='./Template_Colored.jpg'>Jul 21 2023 9:55 PM</a></td>
+                    <td sorttable_customkey='784'><a href='./Template_Colored.jpg'>784 KB</a></td>
+                    <td sorttable_customkey='1689969300'><a href='./Template_Colored.jpg'>Jul 21 2023 9:55 PM</a></td>
                 </tr>
             </tbody>
         </table>
     </div>
+    <button id="mode-toggle">
+        <ion-icon name="moon-outline"></ion-icon>
+    </button>
 </body>
+<script src="/mode.js"></script>
 </html>
