--- a/cdn/downloads/emotes/doomfist/Animated/index.html
+++ b/cdn/downloads/emotes/doomfist/Animated/index.html
@@ -6,8 +6,9 @@
     <link rel="shortcut icon" href="./.favicon.ico">
     <title>Directory Contents</title>
 
-    <link rel="stylesheet" href="https://dark-lynn.github.io/style.css">
-    <script src="https://dark-lynn.github.io/sorttable.js"></script>
+    <link rel="stylesheet" href="/style.css">
+    <script src="/sorttable.js"></script>
+    <script src="https://cdn.jsdelivr.net/npm/ionicons@5.5.2/dist/ionicons/ionicons.esm.js" type="module"></script>
 </head>
 
 <body>
@@ -26,32 +27,32 @@
                 <tr class='directory'>
                     <td><a href='../' class='name'>...</a></td>
                     <td><a href='../'>&lt;GO BACK&gt;</a></td>
-                    <td sorttable_customkey='2253'><a href='../'>N/A</a></td>
-                    <td sorttable_customkey='20190630184359'><a href='../'>N/A</a></td>
+                    <td sorttable_customkey='1'><a href='../'>N/A</a></td>
+                    <td sorttable_customkey='1'><a href='../'>N/A</a></td>
                 </tr>
                 <tr class='directory'>
-                    <td><a href='./112x112/angry.gif/' class='name'>112x112</a></td>
-                    <td><a href='./112x112/angry.gif/'>GIF file</a></td>
-                    <td sorttable_customkey='2253'><a href='./112x112/angry.gif'>N/A</a></td>
-                    <td sorttable_customkey='20190630184359'><a href='./112x112/angry.gif'>Jul 21 2023 10:10 PM</a></td>
+                    <td><a href='./angry(112x).gif' class='name'>angry(112x).gif</a></td>
+                    <td><a href='./angry(112x).gif'>GIF file</a></td>
+                    <td sorttable_customkey='17'><a href='./angry(112x).gif'>157 KB</a></td>
+                    <td sorttable_customkey='20190630184359'><a href='./angry(112x).gif'>Jul 21 2023 10:10 PM</a></td>
                 </tr>
                 <tr class='directory'>
-                    <td><a href='./28x28/angry.gif/' class='name'>28x28</a></td>
-                    <td><a href='./28x28/angry.gif/'>GIF file</a></td>
-                    <td sorttable_customkey='2253'><a href='./28x28/angry.gif/'>N/A</a></td>
-                    <td sorttable_customkey='20190630184359'><a href='./28x28/angry.gif/'>Jul 21 2023 10:10 PM</a></td>
+                    <td><a href='./angry(28x).gif' class='name'>angry(28x).gif</a></td>
+                    <td><a href='./angry(28x).gif'>GIF file</a></td>
+                    <td sorttable_customkey='51'><a href='./angry(28x).gif'>17 KB</a></td>
+                    <td sorttable_customkey='20190630184359'><a href='./angry(28x).gif'>Jul 21 2023 10:10 PM</a></td>
                 </tr>
                 <tr class='directory'>
-                    <td><a href='./56x56/angry.gif/' class='name'>56x56</a></td>
-                    <td><a href='./56x56/angry.gif/'>GIF file</a></td>
-                    <td sorttable_customkey='2253'><a href='./56x56/v/'>N/A</a></td>
-                    <td sorttable_customkey='20190630184359'><a href='./56x56/angry.gif/'>Jul 21 2023 10:10 PM</a></td>
+                    <td><a href='./angry(56x).gif' class='name'>56x56</a></td>
+                    <td><a href='./angry(56x).gif'>GIF file</a></td>
+                    <td sorttable_customkey='2253'><a href='./angry(56x).gif'>51 KB</a></td>
+                    <td sorttable_customkey='20190630184359'><a href='./angry(56x).gif'>Jul 21 2023 10:10 PM</a></td>
                 </tr>
                 <tr class='directory'>
-                    <td><a href='./1000x1000/angry.gif/' class='name'>1000x1000</a></td>
-                    <td><a href='./1000x1000/angry.gif/'>GIF file</a></td>
-                    <td sorttable_customkey='2253'><a href='./1000x1000/angry.gif/'>N/A</a></td>
-                    <td sorttable_customkey='20190630184359'><a href='./1000x1000/angry.gif/'>Jul 21 2023 10:12 PM</a></td>
+                    <td><a href='./angry.gif' class='name'>angry.gif</a></td>
+                    <td><a href='./angry.gif'>GIF file</a></td>
+                    <td sorttable_customkey='5091'><a href='./angry.gif'>5 MB</a></td>
+                    <td sorttable_customkey='20190630184359'><a href='./angry.gif'>Jul 21 2023 10:12 PM</a></td>
                 </tr>
             </tbody>
         </table>
