--- a/cdn/downloads/emotes/doomfist/Animated/index.html
+++ b/cdn/downloads/emotes/doomfist/Animated/index.html
@@ -57,5 +57,9 @@
             </tbody>
         </table>
     </div>
+    <button id="mode-toggle">
+        <ion-icon name="moon-outline"></ion-icon>
+    </button>
 </body>
+<script src="/mode.js"></script>
 </html>
