--- a/cdn/downloads/emotes/doomfist/Animated/index.html
+++ b/cdn/downloads/emotes/doomfist/Animated/index.html
@@ -13,7 +13,7 @@
 
 <body>
     <div id="container">
-        <h1>cdn.lynnux.xyz/downloads/emotes/mercy/Animated</h1>
+        <h1>/mercy/Animated</h1>
         <table class="sortable">
             <thead>
                 <tr>
