--- a/cdn/downloads/emotes/doomfist/28x28/index.html
+++ b/cdn/downloads/emotes/doomfist/28x28/index.html
@@ -6,13 +6,14 @@
     <link rel="shortcut icon" href="./.favicon.ico">
     <title>Directory Contents</title>
 
-    <link rel="stylesheet" href="https://dark-lynn.github.io/style.css">
-    <script src="https://dark-lynn.github.io/sorttable.js"></script>
+    <link rel="stylesheet" href="/style.css">
+    <script src="/sorttable.js"></script>
+    <script src="https://cdn.jsdelivr.net/npm/ionicons@5.5.2/dist/ionicons/ionicons.esm.js" type="module"></script>
 </head>
 
 <body>
     <div id="container">
-        <h1>cdn.lynnux.xyz/downloads/emotes/doomfist/28x28/</h1>
+        <h1>/doomfist/28x28/</h1>
         <table class="sortable">
             <thead>
                 <tr>
@@ -26,83 +27,88 @@
                 <tr class='directory'>
                     <td><a href='../' class='name'>...</a></td>
                     <td><a href='../'>&lt;GO BACK&gt;</a></td>
-                    <td sorttable_customkey='2253'><a href='../'>N/A</a></td>
-                    <td sorttable_customkey='20190630184359'><a href='../'>N/A</a></td>
+                    <td sorttable_customkey='1'><a href='../'>N/A</a></td>
+                    <td sorttable_customkey='1'><a href='../'>N/A</a></td>
                 </tr>
                 <tr class='file'>
-                    <td><a href='./GG.png/' class='name'>GG.png</a></td>
-                    <td><a href='./GG.png/'>PNG file</a></td>
-                    <td sorttable_customkey='2253'><a href='./GG.png/'>4.78 KB</a></td>
-                    <td sorttable_customkey='20190630184359'><a href='./GG.png/'>Jul 23 2023 9:44 PM</a></td>
+                    <td><a href='./GG.png' class='name'>GG.png</a></td>
+                    <td><a href='./GG.png'>PNG file</a></td>
+                    <td sorttable_customkey='478'><a href='./GG.png'>4.78 KB</a></td>
+                    <td sorttable_customkey='1689969300'><a href='./GG.png'>Jul 23 2023 9:44 PM</a></td>
                 </tr>
                 <tr class='file'>
                     <td><a href='./clap.png' class='name'>clap.png</a></td>
                     <td><a href='./clap.png'>PNG file</a></td>
-                    <td sorttable_customkey='29460'><a href='./clap.png'>4.71 KB</a></td>
-                    <td sorttable_customkey='20190630184359'><a href='./clap.png'>Jul 23 2023 9:44 PM</a></td>
+                    <td sorttable_customkey='471'><a href='./clap.png'>4.71 KB</a></td>
+                    <td sorttable_customkey='1689969300'><a href='./clap.png'>Jul 23 2023 9:44 PM</a></td>
                 </tr>
                 <tr class='file'>
                     <td><a href='./gun.png' class='name'>gun.png</a></td>
                     <td><a href='./gun.png'>PNG file</a></td>
-                    <td sorttable_customkey='29460'><a href='./gun.png'>4.48 KB</a></td>
-                    <td sorttable_customkey='20190630184359'><a href='./gun.png'>Jul 23 2023 9:44 PM</a></td>
+                    <td sorttable_customkey='448'><a href='./gun.png'>4.48 KB</a></td>
+                    <td sorttable_customkey='1689969300'><a href='./gun.png'>Jul 23 2023 9:44 PM</a></td>
                 </tr>
                 <tr class='file'>
                     <td><a href='./heart.png' class='name'>heart.png</a></td>
                     <td><a href='./heart.png'>PNG file</a></td>
-                    <td sorttable_customkey='29460'><a href='./heart.png'>4.46 KB</a></td>
-                    <td sorttable_customkey='20190630184359'><a href='./heart.png'>Jul 23 2023 9:44 PM</a></td>
+                    <td sorttable_customkey='446'><a href='./heart.png'>4.46 KB</a></td>
+                    <td sorttable_customkey='1689969300'><a href='./heart.png'>Jul 23 2023 9:44 PM</a></td>
                 </tr>
                 <tr class='file'>
-                    <td><a href='./laugh new.png/' class='name'>laugh new.png</a></td>
-                    <td><a href='./laugh new.png/'>PNG file</a></td>
-                    <td sorttable_customkey='2253'><a href='./laugh new.png/'>4.58 KB</a></td>
-                    <td sorttable_customkey='20190630184359'><a href='./laugh new.png/'>Jul 23 2023 9:44 PM</a></td>
+                    <td><a href='./laugh new.png' class='name'>laugh new.png</a></td>
+                    <td><a href='./laugh new.png'>PNG file</a></td>
+                    <td sorttable_customkey='458'><a href='./laugh new.png'>4.58 KB</a></td>
+                    <td sorttable_customkey='1689969300'><a href='./laugh new.png'>Jul 23 2023 9:44 PM</a></td>
                 </tr>
                 <tr class='file'>
                     <td><a href='./laugh.png' class='name'>laugh.png</a></td>
                     <td><a href='./laugh.png'>PNG file</a></td>
-                    <td sorttable_customkey='29460'><a href='./laugh.png'>4.57 KB</a></td>
-                    <td sorttable_customkey='20190630184359'><a href='./laugh.png'>Jul 23 2023 9:44 PM</a></td>
+                    <td sorttable_customkey='457'><a href='./laugh.png'>4.57 KB</a></td>
+                    <td sorttable_customkey='1689969300'><a href='./laugh.png'>Jul 23 2023 9:44 PM</a></td>
                 </tr>
                 <tr class='file'>
-                    <td><a href='./ok.png/' class='name'>ok.png</a></td>
-                    <td><a href='./ok.png/'>PNG file</a></td>
-                    <td sorttable_customkey='2253'><a href='./ok.png/'>4.72 KB</a></td>
-                    <td sorttable_customkey='20190630184359'><a href='./ok.png/'>Jul 23 2023 9:44 PM</a></td>
+                    <td><a href='./ok.png' class='name'>ok.png</a></td>
+                    <td><a href='./ok.png'>PNG file</a></td>
+                    <td sorttable_customkey='472'><a href='./ok.png'>4.72 KB</a></td>
+                    <td sorttable_customkey='1689969300'><a href='./ok.png'>Jul 23 2023 9:44 PM</a></td>
                 </tr>
                 <tr class='file'>
                     <td><a href='./popcorn.png' class='name'>popcorn.png</a></td>
                     <td><a href='./popcorn.png'>PNG file</a></td>
-                    <td sorttable_customkey='29460'><a href='./popcorn.png'>4.56 KB</a></td>
-                    <td sorttable_customkey='20190630184359'><a href='./popcorn.png'>Jul 23 2023 9:44 PM</a></td>
+                    <td sorttable_customkey='456'><a href='./popcorn.png'>4.56 KB</a></td>
+                    <td sorttable_customkey='1689969300'><a href='./popcorn.png'>Jul 23 2023 9:44 PM</a></td>
                 </tr>
                 <tr class='file'>
-                    <td><a href='./shock.png/' class='name'>shock.png</a></td>
-                    <td><a href='./shock.png/'>PNG file</a></td>
-                    <td sorttable_customkey='2253'><a href='./shock.png/'>4.84 KB</a></td>
-                    <td sorttable_customkey='20190630184359'><a href='./shock.png/'>Jul 23 2023 9:44 PM</a></td>
+                    <td><a href='./shock.png' class='name'>shock.png</a></td>
+                    <td><a href='./shock.png'>PNG file</a></td>
+                    <td sorttable_customkey='484'><a href='./shock.png'>4.84 KB</a></td>
+                    <td sorttable_customkey='1689969300'><a href='./shock.png'>Jul 23 2023 9:44 PM</a></td>
                 </tr>
                 <tr class='file'>
                     <td><a href='./sulk.png' class='name'>sulk.png</a></td>
                     <td><a href='./sulk.png'>PNG file</a></td>
-                    <td sorttable_customkey='29460'><a href='./sulk.png'>4.57 KB</a></td>
-                    <td sorttable_customkey='20190630184359'><a href='./sulk.png'>Jul 23 2023 9:44 PM</a></td>
+                    <td sorttable_customkey='457'><a href='./sulk.png'>4.57 KB</a></td>
+                    <td sorttable_customkey='1689969300'><a href='./sulk.png'>Jul 23 2023 9:44 PM</a></td>
                 </tr>
                 <tr class='file'>
-                    <td><a href='./think.png/' class='name'>think.png</a></td>
-                    <td><a href='./think.png/'>PNG file</a></td>
-                    <td sorttable_customkey='2253'><a href='./think.png/'>4.56 KB</a></td>
-                    <td sorttable_customkey='20190630184359'><a href='./think.png/'>Jul 23 2023 9:44 PM</a></td>
+                    <td><a href='./think.png' class='name'>think.png</a></td>
+                    <td><a href='./think.png'>PNG file</a></td>
+                    <td sorttable_customkey='456'><a href='./think.png'>4.56 KB</a></td>
+                    <td sorttable_customkey='1689969300'><a href='./think.png'>Jul 23 2023 9:44 PM</a></td>
                 </tr>
                 <tr class='file'>
                     <td><a href='./wave.png' class='name'>wave.png</a></td>
                     <td><a href='./wave.png'>PNG file</a></td>
-                    <td sorttable_customkey='29460'><a href='./wave.png'>4.7 KB</a></td>
-                    <td sorttable_customkey='20190630184359'><a href='./wave.png'>Jul 23 2023 9:44 PM</a></td>
+                    <td sorttable_customkey='470'><a href='./wave.png'>4.7 KB</a></td>
+                    <td sorttable_customkey='1689969300'><a href='./wave.png'>Jul 23 2023 9:44 PM</a></td>
                 </tr>
             </tbody>
         </table>
-    </div>
+    </table>
+</div>
+<button id="mode-toggle">
+    <ion-icon name="moon-outline"></ion-icon>
+</button>
 </body>
+<script src="/mode.js"></script>
 </html>
