--- a/cdn/downloads/emotes/doomfist/56x56/index.html
+++ b/cdn/downloads/emotes/doomfist/56x56/index.html
@@ -26,80 +26,80 @@
                 <tr class='directory'>
                     <td><a href='../' class='name'>...</a></td>
                     <td><a href='../'>&lt;GO BACK&gt;</a></td>
-                    <td sorttable_customkey='2253'><a href='../'>N/A</a></td>
-                    <td sorttable_customkey='20190630184359'><a href='../'>N/A</a></td>
+                    <td sorttable_customkey='1'><a href='../'>N/A</a></td>
+                    <td sorttable_customkey='1'><a href='../'>N/A</a></td>
                 </tr>
                 <tr class='file'>
-                    <td><a href='./GG.png/' class='name'>GG.png</a></td>
-                    <td><a href='./GG.png/'>PNG file</a></td>
-                    <td sorttable_customkey='2253'><a href='./GG.png/'>9.02 KB</a></td>
-                    <td sorttable_customkey='20190630184359'><a href='./GG.png/'>Jul 23 2023 9:44 PM</a></td>
+                    <td><a href='./GG.png' class='name'>GG.png</a></td>
+                    <td><a href='./GG.png'>PNG file</a></td>
+                    <td sorttable_customkey='902'><a href='./GG.png'>9.02 KB</a></td>
+                    <td sorttable_customkey='1689969300'><a href='./GG.png'>Jul 23 2023 9:44 PM</a></td>
                 </tr>
                 <tr class='file'>
                     <td><a href='./clap.png' class='name'>clap.png</a></td>
                     <td><a href='./clap.png'>PNG file</a></td>
-                    <td sorttable_customkey='29460'><a href='./clap.png'>9.03 KB</a></td>
-                    <td sorttable_customkey='20190630184359'><a href='./clap.png'>Jul 23 2023 9:44 PM</a></td>
+                    <td sorttable_customkey='903'><a href='./clap.png'>9.03 KB</a></td>
+                    <td sorttable_customkey='1689969300'><a href='./clap.png'>Jul 23 2023 9:44 PM</a></td>
                 </tr>
                 <tr class='file'>
                     <td><a href='./gun.png' class='name'>gun.png</a></td>
                     <td><a href='./gun.png'>PNG file</a></td>
-                    <td sorttable_customkey='29460'><a href='./gun.png'>8.26 KB</a></td>
-                    <td sorttable_customkey='20190630184359'><a href='./gun.png'>Jul 23 2023 9:44 PM</a></td>
+                    <td sorttable_customkey='826'><a href='./gun.png'>8.26 KB</a></td>
+                    <td sorttable_customkey='1689969300'><a href='./gun.png'>Jul 23 2023 9:44 PM</a></td>
                 </tr>
                 <tr class='file'>
                     <td><a href='./heart.png' class='name'>heart.png</a></td>
                     <td><a href='./heart.png'>PNG file</a></td>
-                    <td sorttable_customkey='29460'><a href='./heart.png'>8.04 KB</a></td>
-                    <td sorttable_customkey='20190630184359'><a href='./heart.png'>Jul 23 2023 9:44 PM</a></td>
+                    <td sorttable_customkey='804'><a href='./heart.png'>8.04 KB</a></td>
+                    <td sorttable_customkey='1689969300'><a href='./heart.png'>Jul 23 2023 9:44 PM</a></td>
                 </tr>
                 <tr class='file'>
-                    <td><a href='./laugh new.png/' class='name'>laugh new.png</a></td>
-                    <td><a href='./laugh new.png/'>PNG file</a></td>
-                    <td sorttable_customkey='2253'><a href='./laugh new.png/'>8.39 KB</a></td>
-                    <td sorttable_customkey='20190630184359'><a href='./laugh new.png/'>Jul 23 2023 9:44 PM</a></td>
+                    <td><a href='./laugh new.png' class='name'>laugh new.png</a></td>
+                    <td><a href='./laugh new.png'>PNG file</a></td>
+                    <td sorttable_customkey='839'><a href='./laugh new.png'>8.39 KB</a></td>
+                    <td sorttable_customkey='1689969300'><a href='./laugh new.png'>Jul 23 2023 9:44 PM</a></td>
                 </tr>
                 <tr class='file'>
                     <td><a href='./laugh.png' class='name'>laugh.png</a></td>
                     <td><a href='./laugh.png'>PNG file</a></td>
-                    <td sorttable_customkey='29460'><a href='./laugh.png'>8.25 KB</a></td>
-                    <td sorttable_customkey='20190630184359'><a href='./laugh.png'>Jul 23 2023 9:44 PM</a></td>
+                    <td sorttable_customkey='825'><a href='./laugh.png'>8.25 KB</a></td>
+                    <td sorttable_customkey='1689969300'><a href='./laugh.png'>Jul 23 2023 9:44 PM</a></td>
                 </tr>
                 <tr class='file'>
-                    <td><a href='./ok.png/' class='name'>ok.png</a></td>
-                    <td><a href='./ok.png/'>PNG file</a></td>
-                    <td sorttable_customkey='2253'><a href='./ok.png/'>8.82 KB</a></td>
-                    <td sorttable_customkey='20190630184359'><a href='./ok.png/'>Jul 23 2023 9:44 PM</a></td>
+                    <td><a href='./ok.png' class='name'>ok.png</a></td>
+                    <td><a href='./ok.png'>PNG file</a></td>
+                    <td sorttable_customkey='882'><a href='./ok.png'>8.82 KB</a></td>
+                    <td sorttable_customkey='1689969300'><a href='./ok.png'>Jul 23 2023 9:44 PM</a></td>
                 </tr>
                 <tr class='file'>
                     <td><a href='./popcorn.png' class='name'>popcorn.png</a></td>
                     <td><a href='./popcorn.png'>PNG file</a></td>
-                    <td sorttable_customkey='29460'><a href='./popcorn.png'>8.71 KB</a></td>
-                    <td sorttable_customkey='20190630184359'><a href='./popcorn.png'>Jul 23 2023 9:44 PM</a></td>
+                    <td sorttable_customkey='871'><a href='./popcorn.png'>8.71 KB</a></td>
+                    <td sorttable_customkey='1689969300'><a href='./popcorn.png'>Jul 23 2023 9:44 PM</a></td>
                 </tr>
                 <tr class='file'>
-                    <td><a href='./shock.png/' class='name'>shock.png</a></td>
-                    <td><a href='./shock.png/'>PNG file</a></td>
-                    <td sorttable_customkey='2253'><a href='./shock.png/'>9.18 KB</a></td>
-                    <td sorttable_customkey='20190630184359'><a href='./shock.png/'>Jul 23 2023 9:44 PM</a></td>
+                    <td><a href='./shock.png' class='name'>shock.png</a></td>
+                    <td><a href='./shock.png'>PNG file</a></td>
+                    <td sorttable_customkey='918'><a href='./shock.png'>9.18 KB</a></td>
+                    <td sorttable_customkey='1689969300'><a href='./shock.png'>Jul 23 2023 9:44 PM</a></td>
                 </tr>
                 <tr class='file'>
                     <td><a href='./sulk.png' class='name'>sulk.png</a></td>
                     <td><a href='./sulk.png'>PNG file</a></td>
-                    <td sorttable_customkey='29460'><a href='./sulk.png'>8.3 KB</a></td>
-                    <td sorttable_customkey='20190630184359'><a href='./sulk.png'>Jul 23 2023 9:44 PM</a></td>
+                    <td sorttable_customkey='830'><a href='./sulk.png'>8.3 KB</a></td>
+                    <td sorttable_customkey='1689969300'><a href='./sulk.png'>Jul 23 2023 9:44 PM</a></td>
                 </tr>
                 <tr class='file'>
-                    <td><a href='./think.png/' class='name'>think.png</a></td>
-                    <td><a href='./think.png/'>PNG file</a></td>
-                    <td sorttable_customkey='2253'><a href='./think.png/'>8.26 KB</a></td>
-                    <td sorttable_customkey='20190630184359'><a href='./think.png/'>Jul 23 2023 9:44 PM</a></td>
+                    <td><a href='./think.png' class='name'>think.png</a></td>
+                    <td><a href='./think.png'>PNG file</a></td>
+                    <td sorttable_customkey='826'><a href='./think.png'>8.26 KB</a></td>
+                    <td sorttable_customkey='1689969300'><a href='./think.png'>Jul 23 2023 9:44 PM</a></td>
                 </tr>
                 <tr class='file'>
                     <td><a href='./wave.png' class='name'>wave.png</a></td>
                     <td><a href='./wave.png'>PNG file</a></td>
-                    <td sorttable_customkey='29460'><a href='./wave.png'>8.9 KB</a></td>
-                    <td sorttable_customkey='20190630184359'><a href='./wave.png'>Jul 23 2023 9:44 PM</a></td>
+                    <td sorttable_customkey='890'><a href='./wave.png'>8.9 KB</a></td>
+                    <td sorttable_customkey='1689969300'><a href='./wave.png'>Jul 23 2023 9:44 PM</a></td>
                 </tr>
             </tbody>
         </table>
