--- a/cdn/downloads/emotes/doomfist/56x56/index.html
+++ b/cdn/downloads/emotes/doomfist/56x56/index.html
@@ -6,13 +6,14 @@
     <link rel="shortcut icon" href="./.favicon.ico">
     <title>Directory Contents</title>
 
-    <link rel="stylesheet" href="https://dark-lynn.github.io/style.css">
-    <script src="https://dark-lynn.github.io/sorttable.js"></script>
+    <link rel="stylesheet" href="/style.css">
+    <script src="/sorttable.js"></script>
+    <script src="https://cdn.jsdelivr.net/npm/ionicons@5.5.2/dist/ionicons/ionicons.esm.js" type="module"></script>
 </head>
 
 <body>
     <div id="container">
-        <h1>cdn.lynnux.xyz/downloads/emotes/doomfist/56x56/</h1>
+        <h1>/doomfist/56x56/</h1>
         <table class="sortable">
             <thead>
                 <tr>
