--- a/cdn/downloads/emotes/doomfist/Animated/index.html
+++ b/cdn/downloads/emotes/doomfist/Animated/index.html
@@ -43,7 +43,7 @@
                     <td sorttable_customkey='20190630184359'><a href='./angry(28x).gif'>Jul 21 2023 10:10 PM</a></td>
                 </tr>
                 <tr class='directory'>
-                    <td><a href='./angry(56x).gif' class='name'>56x56</a></td>
+                    <td><a href='./angry(56x).gif' class='name'>angry(56x).gif</a></td>
                     <td><a href='./angry(56x).gif'>GIF file</a></td>
                     <td sorttable_customkey='2253'><a href='./angry(56x).gif'>51 KB</a></td>
                     <td sorttable_customkey='20190630184359'><a href='./angry(56x).gif'>Jul 21 2023 10:10 PM</a></td>
