--- a/cdn/downloads/zip/index.html
+++ b/cdn/downloads/zip/index.html
@@ -6,13 +6,14 @@
     <link rel="shortcut icon" href="./.favicon.ico">
     <title>Directory Contents</title>
 
-    <link rel="stylesheet" href="https://dark-lynn.github.io/style.css">
-    <script src="https://dark-lynn.github.io/sorttable.js"></script>
+    <link rel="stylesheet" href="/style.css">
+    <script src="/sorttable.js"></script>
+    <script src="https://cdn.jsdelivr.net/npm/ionicons@5.5.2/dist/ionicons/ionicons.esm.js" type="module"></script>
 </head>
 
 <body>
     <div id="container">
-        <h1>cdn.lynnux.xyz/downloads/zip/</h1>
+        <h1>/downloads/zip/</h1>
         <table class="sortable">
             <thead>
                 <tr>
@@ -26,24 +27,28 @@
                 <tr class='directory'>
                     <td><a href='../' class='name'>...</a></td>
                     <td><a href='../'>&lt;GO BACK&gt;</a></td>
-                    <td sorttable_customkey='2253'><a href='../'>N/A</a></td>
-                    <td sorttable_customkey='20190630184359'><a href='../'>N/A</a></td>
+                    <td sorttable_customkey='1'><a href='../'>N/A</a></td>
+                    <td sorttable_customkey='1'><a href='../'>N/A</a></td>
                 </tr>
                 <tr class='file'>
-                    <td><a href='./Doomfist.zip/' class='name'>Doomfist.zip</a></td>
-                    <td><a href='./Doomfist.zip/'>ZIP file</a></td>
-                    <td sorttable_customkey='2253'><a href='./Doomfist.zip/'>9.95 MB</a></td>
-                    <td sorttable_customkey='20190630184359'><a href='./Doomfist.zip/'>Jul 21 2023 9:41 PM</a></td>
+                    <td><a href='./Doomfist.zip' class='name'>Doomfist.zip</a></td>
+                    <td><a href='./Doomfist.zip'>ZIP file</a></td>
+                    <td sorttable_customkey='995'><a href='./Doomfist.zip'>9.95 MB</a></td>
+                    <td sorttable_customkey='1689968300'><a href='./Doomfist.zip'>Jul 21 2023 9:41 PM</a></td>
                 </tr>
                 <tr class='file'>
                     <td><a href='./Mercy.zip' class='name'>Mercy.zip</a></td>
                     <td><a href='./Mercy.zip'>ZIP file</a></td>
-                    <td sorttable_customkey='29460'><a href='./Mercy.zip'>17.6 MB</a></td>
-                    <td sorttable_customkey='20190630184359'><a href='./Mercy.zip'>Jul 21 2023 9:41 PM</a></td>
+                    <td sorttable_customkey='1760'><a href='./Mercy.zip'>17.6 MB</a></td>
+                    <td sorttable_customkey='1689968400'><a href='./Mercy.zip'>Jul 21 2023 9:41 PM</a></td>
                 </tr>
 
             </tbody>
         </table>
     </div>
+    <button id="mode-toggle">
+        <ion-icon name="moon-outline"></ion-icon>
+    </button>
 </body>
+<script src="/mode.js"></script>
 </html>
