--- a/sites/lynnux/404.html
+++ b/sites/lynnux/404.html
@@ -4,8 +4,8 @@
 <head>
     <title>404 - Page Not Found</title>
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <link rel="stylesheet" href="../../akira/assets/css/styles.css">
-    <link rel="shortcut icon" href="./assets/images/my-avatar.png">
+    <link rel="stylesheet" href="https://akira.lynnux.xyz/assets/css/styles.css">
+    <link rel="shortcut icon" href="/assets/images/my-avatar.png">
 </head>
 
 <body>
