--- a/sites/lynnux/index.html
+++ b/sites/lynnux/index.html
@@ -444,7 +444,7 @@
           </header>
           <section class="contact-form">
             <h3 class="h3 form-title">Contact Form</h3>
-            <form id="contact-form" action="./#messageSend" class="form" data-netlify="true" data-netlify-honeypot="bot-field">
+            <form id="contact-form" action="./?messageSuccess" class="form" data-netlify="true" data-netlify-honeypot="bot-field">
               <!-- Hidden field to prevent spam -->
               <input type="hidden" name="bot-field" />
               <!-- Rest of your form elements -->
