--- a/cdn/downloads/emotes/mercy/1000x1000/index.html
+++ b/cdn/downloads/emotes/mercy/1000x1000/index.html
@@ -77,6 +77,12 @@ Includes 11 .png files" />
                     <td sorttable_customkey='1689969300'><a href='./laugh.png'>Jul 21 2023 9:55 PM</a></td>
                 </tr>
                 <tr class='file'>
+                    <td><a href='./pray.png' class='name'>pray.png</a></td>
+                    <td><a href='./pray.png'>PNG file</a></td>
+                    <td sorttable_customkey='354'><a href='./pray.png'>354 KB</a></td>
+                    <td sorttable_customkey='1690504600'><a href='./pray.png'>Jul 28 2023 2:37 AM</a></td>
+                </tr>
+                <tr class='file'>
                     <td><a href='./ok.png' class='name'>ok.png</a></td>
                     <td><a href='./ok.png'>PNG file</a></td>
                     <td sorttable_customkey='480'><a href='./ok.png'>480 KB</a></td>
