--- a/cdn/downloads/emotes/mercy/112x112/index.html
+++ b/cdn/downloads/emotes/mercy/112x112/index.html
@@ -84,6 +84,12 @@ Includes 11 .png files" />
                     <td sorttable_customkey='1689969300'><a href='./ok.png'>Jul 21 2023 9:55 PM</a></td>
                 </tr>
                 <tr class='file'>
+                    <td><a href='./please.png' class='name'>please.png</a></td>
+                    <td><a href='./please.png'>PNG file</a></td>
+                    <td sorttable_customkey='220'><a href='./please.png'>22 KB</a></td>
+                    <td sorttable_customkey='1690504600'><a href='./please.png'>Jul 21 2023 9:55 PM</a></td>
+                </tr>
+                <tr class='file'>
                     <td><a href='./popcorn.png' class='name'>popcorn.png</a></td>
                     <td><a href='./popcorn.png'>PNG file</a></td>
                     <td sorttable_customkey='316'><a href='./popcorn.png'>31.6 KB</a></td>
