--- a/cdn/downloads/emotes/mercy/367x367/index.html
+++ b/cdn/downloads/emotes/mercy/367x367/index.html
@@ -86,6 +86,12 @@ Includes 11 .png files" />
                     <td sorttable_customkey='1689969300'><a href='./Ok.png'>Jul 21 2023 9:55 PM</a></td>
                 </tr>
                 <tr class='file'>
+                    <td><a href='./please.png' class='name'>please.png</a></td>
+                    <td><a href='./please.png'>PNG file</a></td>
+                    <td sorttable_customkey='92'><a href='./please.png'>92 KB</a></td>
+                    <td sorttable_customkey='1690504600'><a href='./please.png'>Jul 21 2023 9:55 PM</a></td>
+                </tr>
+                <tr class='file'>
                     <td><a href='./Popcorn.png' class='name'>Popcorn.png</a></td>
                     <td><a href='./Popcorn.png'>PNG file</a></td>
                     <td sorttable_customkey='228'><a href='./Popcorn.png'>228 KB</a></td>
