--- a/cdn/downloads/emotes/mercy/1000x1000/index.html
+++ b/cdn/downloads/emotes/mercy/1000x1000/index.html
@@ -89,10 +89,22 @@ Includes 11 .png files" />
                     <td sorttable_customkey='1689969300'><a href='./ok.png'>Jul 21 2023 9:55 PM</a></td>
                 </tr>
                 <tr class='file'>
+                    <td><a href='./please.png' class='name'>please.png</a></td>
+                    <td><a href='./please.png'>PNG file</a></td>
+                    <td sorttable_customkey='575'><a href='./please.png'>575 KB</a></td>
+                    <td sorttable_customkey='1690504600'><a href='./please.png'>Jul 21 2023 9:55 PM</a></td>
+                </tr>
+                <tr class='file'>
                     <td><a href='./popcorn.png' class='name'>popcorn.png</a></td>
                     <td><a href='./popcorn.png'>PNG file</a></td>
                     <td sorttable_customkey='562'><a href='./popcorn.png'>562 KB</a></td>
                     <td sorttable_customkey='1689969300'><a href='./popcorn.png'>Jul 21 2023 9:55 PM</a></td>
+                </tr>
+                <tr class='file'>
+                    <td><a href='./pray.png' class='name'>pray.png</a></td>
+                    <td><a href='./pray.png'>PNG file</a></td>
+                    <td sorttable_customkey='354'><a href='./pray.png'>354 KB</a></td>
+                    <td sorttable_customkey='1690504600'><a href='./pray.png'>Jul 21 2023 9:55 PM</a></td>
                 </tr>
                 <tr class='file'>
                     <td><a href='./shock.png' class='name'>shock.png</a></td>
