--- a/cdn/downloads/emotes/mercy/28x28/index.html
+++ b/cdn/downloads/emotes/mercy/28x28/index.html
@@ -85,6 +85,12 @@ Includes 11 .png files" />
                     <td sorttable_customkey='1689969300'><a href='./ok.png'>Jul 21 2023 9:55 PM</a></td>
                 </tr>
                 <tr class='file'>
+                    <td><a href='./please.png' class='name'>please.png</a></td>
+                    <td><a href='./please.png'>PNG file</a></td>
+                    <td sorttable_customkey='360'><a href='./please.png'>3.6 KB</a></td>
+                    <td sorttable_customkey='1690504600'><a href='./please.png'>Jul 21 2023 9:55 PM</a></td>
+                </tr>
+                <tr class='file'>
                     <td><a href='./popcorn.png' class='name'>popcorn.png</a></td>
                     <td><a href='./popcorn.png'>PNG file</a></td>
                     <td sorttable_customkey='521'><a href='./popcorn.png'>5.21 KB</a></td>
