--- a/cdn/downloads/emotes/mercy/56x56/index.html
+++ b/cdn/downloads/emotes/mercy/56x56/index.html
@@ -91,6 +91,12 @@ Includes 11 .png files" />
                     <td sorttable_customkey='1689969300'><a href='./popcorn.png'>Jul 21 2023 9:55 PM</a></td>
                 </tr>
                 <tr class='file'>
+                    <td><a href='./please.png' class='name'>please.png</a></td>
+                    <td><a href='./please.png'>PNG file</a></td>
+                    <td sorttable_customkey='80'><a href='./please.png'>8 KB</a></td>
+                    <td sorttable_customkey='1690504600'><a href='./please.png'>Jul 21 2023 9:55 PM</a></td>
+                </tr>
+                <tr class='file'>
                     <td><a href='./pray.png' class='name'>pray.png</a></td>
                     <td><a href='./pray.png'>PNG file</a></td>
                     <td sorttable_customkey='60'><a href='./pray.png'>6 KB</a></td>
