--- a/sites/lynnux/emotes/index.html
+++ b/sites/lynnux/emotes/index.html
@@ -9,11 +9,11 @@
     <meta property="og:title" content="Lynnux - Portfolio - Emotes" />
     <meta property="og:type" content="website" />
     <meta property="og:description" content="Hi there i'm lynn and here you can see my Emotes portfolio!" />
-    <meta property="og:image" content="https://lynnux.xyz/assets/images/my-avatar.png">
-    <meta property="og:image:secure_url" content="https://lynnux.xyz/assets/images/my-avatar.png">
+    <meta property="og:image" content="https://lynnux.xyz/assets/images/favicon.png">
+    <meta property="og:image:secure_url" content="https://lynnux.xyz/assets/images/favicon.png">
     <meta name="theme-color" content="#f47fff">
     <!-- favicon -->
-    <link rel="shortcut icon" href="https://lynnux.xyz/assets/images/my-avatar.png" type="image/x-icon"/>
+    <link rel="shortcut icon" href="https://lynnux.xyz/assets/images/favicon" type="image/x-icon"/>
     <!-- custom css link -->
     <link rel="stylesheet" href="../assets/css/style.css" />
     <!-- google font link -->
