--- a/sites/lynnux/index.html
+++ b/sites/lynnux/index.html
@@ -7,6 +7,9 @@
     <!-- SEO -->
     <title>Portfolio | Lynnux</title>
     <meta name="description" content="Hi there i'm lynn and i am a passionate Discord bot developer and website developer with experience in various programming languages such as Python, JavaScript, and HTML/CSS and in addition to that im also an artist who loves to make emotes for discord/twitch. I love creating new projects and bringing ideas to life through code or art. I'm constantly learning and exploring new technologies to improve my skills and provide better solutions for my users. I believe that good communication and attention to detail are essential in creating successful projects. Let's work together to create something amazing!">
+    <link rel="canonical" href="https://lynnux.xyz/">
+    <meta name="language" content="en">
+    <meta name="robots" content="index, follow">
 
 
 
