--- a/sites/lynnux/index.html
+++ b/sites/lynnux/index.html
@@ -229,6 +229,7 @@
               <li class="clients-item">
                 <a href="https://twitch.tv/its_toko/">
                   <img src="./assets/images/toko x.png" alt="Its_Toko" height="150"/>
+                  <img id="responsive-image" src="./assets/images/toko x.png" alt="Its_Toko" height="150">
                 </a>
               </li>
               <li class="clients-item">
