--- a/sites/lynnux/index.html
+++ b/sites/lynnux/index.html
@@ -228,13 +228,12 @@
             <ul class="clients-list has-scrollbar">
               <li class="clients-item">
                 <a href="https://twitch.tv/its_toko/">
-                  <img src="./assets/images/toko x.png" alt="Its_Toko" height="150"/>
                   <img id="responsive-image" src="./assets/images/toko x.png" alt="Its_Toko" height="150">
                 </a>
               </li>
               <li class="clients-item">
                 <a href="https://www.twitch.tv/myceliaisoffline">
-                  <img src="./assets/images/MyceliaBanner.png" alt="MyceliaIsOffline" height="150"/>
+                  <img id="responsive-image-1" src="./assets/images/MyceliaBanner.png" alt="MyceliaIsOffline" height="150">
                 </a>
               </li>
             </ul>
