--- a/sites/lynnux/index.html
+++ b/sites/lynnux/index.html
@@ -233,7 +233,7 @@
               </li>
               <li class="clients-item">
                 <a href="https://www.twitch.tv/myceliaisoffline">
-                  <img id="responsive-image-1" src="./assets/images/MyceliaBanner.png" alt="MyceliaIsOffline" height="150">
+                  <img id="MyceliaBanner" src="./assets/images/MyceliaBanner.png" alt="MyceliaIsOffline" height="150">
                 </a>
               </li>
             </ul>
