--- a/sites/lynnux/index.html
+++ b/sites/lynnux/index.html
@@ -35,7 +35,7 @@
       <aside class="sidebar" data-sidebar>
         <div class="sidebar-info">
           <figure class="avatar-box">
-            <img src="./assets/images/my-avatar_120.png" alt="Lynnux" width="120"/>
+            <img src="./assets/images/my-avatar_120.webp" alt="Lynnux" width="120"/>
           </figure>
           <div class="info-content">
             <h1 class="name" title="Lynnux">Lynnux</h1>
@@ -179,7 +179,7 @@
               <li class="testimonials-item">
                 <div class="content-card" data-testimonials-item>
                   <figure class="testimonials-avatar-box">
-                    <img src="./assets/images/Mycelia.png" alt="Mycelia.png" width="60" data-testimonials-avatar/>
+                    <img src="./assets/images/Mycelia.webp" alt="Mycelia.webp" width="60" data-testimonials-avatar/>
                   </figure>
                   <h4 class="h4 testimonials-item-title" data-testimonials-title>Mycelia</h4>
                   <div class="testimonials-text" data-testimonials-text>
@@ -228,12 +228,12 @@
             <ul class="clients-list has-scrollbar">
               <li class="clients-item">
                 <a href="https://twitch.tv/its_toko/">
-                  <img id="responsive-image" src="./assets/images/toko x.png" alt="Its_Toko" height="150">
+                  <img id="responsive-image" src="./assets/images/Toko.webp" alt="Its_Toko" height="150">
                 </a>
               </li>
               <li class="clients-item">
                 <a href="https://www.twitch.tv/myceliaisoffline">
-                  <img id="MyceliaBanner" src="./assets/images/MyceliaBanner.png" alt="MyceliaIsOffline" height="150">
+                  <img id="MyceliaBanner" src="./assets/images/MyceliaBanner.webp" alt="MyceliaIsOffline" height="150">
                 </a>
               </li>
             </ul>
