--- a/cdn/downloads/emotes/sombra/index.html
+++ b/cdn/downloads/emotes/sombra/index.html
@@ -78,8 +78,8 @@
                     <td sorttable_customkey='20190630184306'><a href='./Animated/'>N/A</a></td>
                 </tr>
                 <tr class='file'>
-                    <td><a href='./template.jpg/' class='name'>template.jpg</a></td>
-                    <td><a href='./template.jpg/'>JPG file</a></td>
+                    <td><a href='./template.jpg' class='name'>template.jpg</a></td>
+                    <td><a href='./template.jpg'>JPG file</a></td>
                     <td sorttable_customkey='2'><a href='./template'>1 MB</a></td>
                     <td sorttable_customkey='20190630184307'><a href='./template'>Jul 27 2023 2:53 PM</a></td>
                 </tr>
