--- a/cdn/downloads/emotes/sombra/animated/index.html
+++ b/cdn/downloads/emotes/sombra/animated/index.html
@@ -12,7 +12,7 @@
 
 <body>
     <div id="container">
-        <h1>sombra/1000x1000/</h1>
+        <h1>sombra/animated/</h1>
         <table class="sortable">
             <thead>
                 <tr>
