--- a/cdn/downloads/zip/index.html
+++ b/cdn/downloads/zip/index.html
@@ -42,7 +42,12 @@
                     <td sorttable_customkey='1760'><a href='./Mercy.zip'>17.6 MB</a></td>
                     <td sorttable_customkey='1689968400'><a href='./Mercy.zip'>Jul 21 2023 9:41 PM</a></td>
                 </tr>
-
+                <tr class='file'>
+                    <td><a href='./Sombra.zip' class='name'>Sombra.zip</a></td>
+                    <td><a href='./Sombra.zip'>ZIP file</a></td>
+                    <td sorttable_customkey='1320'><a href='./Sombra.zip'>13.2 MB</a></td>
+                    <td sorttable_customkey='1689968400'><a href='./Sombra.zip'>Jul 21 2023 9:41 PM</a></td>
+                </tr>
             </tbody>
         </table>
     </div>
