--- a/cdn/downloads/emotes/mercy/56x56/index.html
+++ b/cdn/downloads/emotes/mercy/56x56/index.html
@@ -43,16 +43,22 @@ Includes 11 .png files" />
                     <td sorttable_customkey='1'><a href='../'>N/A</a></td>
                 </tr>
                 <tr class='file'>
-                    <td><a href='./GG.png' class='name'>GG.png</a></td>
-                    <td><a href='./GG.png'>PNG file</a></td>
-                    <td sorttable_customkey='118'><a href='./GG.png'>11.8 KB</a></td>
-                    <td sorttable_customkey='1689969300'><a href='./GG.png'>Jul 21 2023 9:55 PM</a></td>
-                </tr>
-                <tr class='file'>
                     <td><a href='./angry.png' class='name'>angry.png</a></td>
                     <td><a href='./angry.png'>PNG file</a></td>
                     <td sorttable_customkey='116'><a href='./angry.png'>11.6 KB</a></td>
                     <td sorttable_customkey='1689969300'><a href='./angry.png'>Jul 21 2023 9:55 PM</a></td>
+                </tr>
+                <tr class='file'>
+                    <td><a href='./cat.png' class='name'>cat.png</a></td>
+                    <td><a href='./cat.png'>PNG file</a></td>
+                    <td sorttable_customkey='103'><a href='./cat.png'>10.3 KB</a></td>
+                    <td sorttable_customkey='1692701725'><a href='./cat.png'>Aug 22 2023 12:34 PM</a></td>
+                </tr>
+                <tr class='file'>
+                    <td><a href='./cheer.png' class='name'>cheer.png</a></td>
+                    <td><a href='./cheer.png'>PNG file</a></td>
+                    <td sorttable_customkey='122'><a href='./cheer.png'>12.2 KB</a></td>
+                    <td sorttable_customkey='1692701725'><a href='./cheer.png'>Aug 22 2023 12:34 PM</a></td>
                 </tr>
                 <tr class='file'>
                     <td><a href='./clap.png' class='name'>clap.png</a></td>
@@ -61,10 +67,46 @@ Includes 11 .png files" />
                     <td sorttable_customkey='1689969300'><a href='./clap.png'>Jul 21 2023 9:55 PM</a></td>
                 </tr>
                 <tr class='file'>
+                    <td><a href='./comfy.png' class='name'>comfy.png</a></td>
+                    <td><a href='./comfy.png'>PNG file</a></td>
+                    <td sorttable_customkey='110'><a href='./comfy.png'>11 KB</a></td>
+                    <td sorttable_customkey='1692701725'><a href='./comfy.png'>Aug 22 2023 12:34 PM</a></td>
+                </tr>
+                <tr class='file'>
+                    <td><a href='./cookies.png' class='name'>cookies.png</a></td>
+                    <td><a href='./cookies.png'>PNG file</a></td>
+                    <td sorttable_customkey='115'><a href='./cookies.png'>11.5 KB</a></td>
+                    <td sorttable_customkey='1692701725'><a href='./cookies.png'>Aug 22 2023 12:34 PM</a></td>
+                </tr>
+                <tr class='file'>
+                    <td><a href='./cry.png' class='name'>cry.png</a></td>
+                    <td><a href='./cry.png'>PNG file</a></td>
+                    <td sorttable_customkey='112'><a href='./cry.png'>11.2 KB</a></td>
+                    <td sorttable_customkey='1692701725'><a href='./cry.png'>Aug 22 2023 12:34 PM</a></td>
+                </tr>
+                <tr class='file'>
+                    <td><a href='./drink.png' class='name'>drink.png</a></td>
+                    <td><a href='./drink.png'>PNG file</a></td>
+                    <td sorttable_customkey='108'><a href='./drink.png'>10.8 KB</a></td>
+                    <td sorttable_customkey='1692701725'><a href='./drink.png'>Aug 22 2023 12:34 PM</a></td>
+                </tr>
+                <tr class='file'>
+                    <td><a href='./GG.png' class='name'>GG.png</a></td>
+                    <td><a href='./GG.png'>PNG file</a></td>
+                    <td sorttable_customkey='118'><a href='./GG.png'>11.8 KB</a></td>
+                    <td sorttable_customkey='1689969300'><a href='./GG.png'>Jul 21 2023 9:55 PM</a></td>
+                </tr>
+                <tr class='file'>
                     <td><a href='./gun.png' class='name'>gun.png</a></td>
                     <td><a href='./gun.png'>PNG file</a></td>
                     <td sorttable_customkey='106'><a href='./gun.png'>10.6 KB</a></td>
                     <td sorttable_customkey='1689969300'><a href='./gun.png'>Jul 21 2023 9:55 PM</a></td>
+                </tr>
+                <tr class='file'>
+                    <td><a href='./hi.png' class='name'>hi.png</a></td>
+                    <td><a href='./hi.png'>PNG file</a></td>
+                    <td sorttable_customkey='119'><a href='./hi.png'>11.8 KB</a></td>
+                    <td sorttable_customkey='1692701725'><a href='./hi.png'>Aug 22 2023 12:34 PM</a></td>
                 </tr>
                 <tr class='file'>
                     <td><a href='./laugh new.png' class='name'>laugh new.png</a></td>
@@ -79,10 +121,22 @@ Includes 11 .png files" />
                     <td sorttable_customkey='1689969300'><a href='./laugh.png'>Jul 21 2023 9:55 PM</a></td>
                 </tr>
                 <tr class='file'>
+                    <td><a href='./lurk.png' class='name'>lurk.png</a></td>
+                    <td><a href='./lurk.png'>PNG file</a></td>
+                    <td sorttable_customkey='105'><a href='./lurk.png'>10.5 KB</a></td>
+                    <td sorttable_customkey='1692701725'><a href='./lurk.png'>Aug 22 2023 12:34 PM</a></td>
+                </tr>
+                <tr class='file'>
                     <td><a href='./ok.png' class='name'>ok.png</a></td>
                     <td><a href='./ok.png'>PNG file</a></td>
                     <td sorttable_customkey='110'><a href='./ok.png'>11 KB</a></td>
                     <td sorttable_customkey='1689969300'><a href='./ok.png'>Jul 21 2023 9:55 PM</a></td>
+                </tr>
+                <tr class='file'>
+                    <td><a href='./peace.png' class='name'>peace.png</a></td>
+                    <td><a href='./peace.png'>PNG file</a></td>
+                    <td sorttable_customkey='116'><a href='./peace.png'>11.6 KB</a></td>
+                    <td sorttable_customkey='1692701725'><a href='./peace.png'>Aug 22 2023 12:34 PM</a></td>
                 </tr>
                 <tr class='file'>
                     <td><a href='./popcorn.png' class='name'>popcorn.png</a></td>
@@ -95,6 +149,12 @@ Includes 11 .png files" />
                     <td><a href='./please.png'>PNG file</a></td>
                     <td sorttable_customkey='80'><a href='./please.png'>8 KB</a></td>
                     <td sorttable_customkey='1690504600'><a href='./please.png'>Jul 21 2023 9:55 PM</a></td>
+                </tr>
+                <tr class='file'>
+                    <td><a href='./pog.png' class='name'>pog.png</a></td>
+                    <td><a href='./pog.png'>PNG file</a></td>
+                    <td sorttable_customkey='108'><a href='./pog.png'>10.8 KB</a></td>
+                    <td sorttable_customkey='1692701725'><a href='./pog.png'>Aug 22 2023 12:34 PM</a></td>
                 </tr>
                 <tr class='file'>
                     <td><a href='./pray.png' class='name'>pray.png</a></td>
@@ -119,6 +179,12 @@ Includes 11 .png files" />
                     <td><a href='./think.png'>PNG file</a></td>
                     <td sorttable_customkey='112'><a href='./think.png'>11.2 KB</a></td>
                     <td sorttable_customkey='1689969300'><a href='./think.png'>Jul 21 2023 9:55 PM</a></td>
+                </tr>
+                <tr class='file'>
+                    <td><a href='./wtf.png' class='name'>wtf.png</a></td>
+                    <td><a href='./wtf.png'>PNG file</a></td>
+                    <td sorttable_customkey='117'><a href='./wtf.png'>11.7 KB</a></td>
+                    <td sorttable_customkey='1692701725'><a href='./wtf.png'>Aug 22 2023 12:34 PM</a></td>
                 </tr>
             </tbody>
         </table>
