--- a/cdn/downloads/emotes/mercy/1000x1000/index.html
+++ b/cdn/downloads/emotes/mercy/1000x1000/index.html
@@ -41,16 +41,22 @@ Includes 11 .png files" />
                     <td sorttable_customkey='1'><a href='../'>N/A</a></td>
                 </tr>
                 <tr class='file'>
-                    <td><a href='./GG.png' class='name'>GG.png</a></td>
-                    <td><a href='./GG.png'>PNG file</a></td>
-                    <td sorttable_customkey='522'><a href='./GG.png'>522 KB</a></td>
-                    <td sorttable_customkey='1689969300'><a href='./GG.png'>Jul 21 2023 9:55 PM</a></td>
-                </tr>
-                <tr class='file'>
                     <td><a href='./angry.png' class='name'>angry.png</a></td>
                     <td><a href='./angry.png'>PNG file</a></td>
                     <td sorttable_customkey='514'><a href='./angry.png'>514 KB</a></td>
                     <td sorttable_customkey='1689969300'><a href='./angry.png'>Jul 21 2023 9:55 PM</a></td>
+                </tr>
+                <tr class='file'>
+                    <td><a href='./cat.png' class='name'>cat.png</a></td>
+                    <td><a href='./cat.png'>PNG file</a></td>
+                    <td sorttable_customkey='395'><a href='./cat.png'>395 KB</a></td>
+                    <td sorttable_customkey='1692701725'><a href='./cry.png'>Aug 22 2023 12:34 PM</a></td>
+                </tr>
+                <tr class='file'>
+                    <td><a href='./cheer.png' class='name'>cheer.png</a></td>
+                    <td><a href='./cheer.png'>PNG file</a></td>
+                    <td sorttable_customkey='603'><a href='./cheer.png'>603 KB</a></td>
+                    <td sorttable_customkey='1692701725'><a href='./cheer.png'>Aug 22 2023 12:34 PM</a></td>
                 </tr>
                 <tr class='file'>
                     <td><a href='./clap.png' class='name'>clap.png</a></td>
@@ -59,10 +65,46 @@ Includes 11 .png files" />
                     <td sorttable_customkey='1689969300'><a href='./clap.png'>Jul 21 2023 9:55 PM</a></td>
                 </tr>
                 <tr class='file'>
+                    <td><a href='./comfy.png' class='name'>comfy.png</a></td>
+                    <td><a href='./comfy.png'>PNG file</a></td>
+                    <td sorttable_customkey='359'><a href='./comfy.png'>359 KB</a></td>
+                    <td sorttable_customkey='1692701725'><a href='./comfy.png'>Aug 22 2023 12:34 PM</a></td>
+                </tr>
+                <tr class='file'>
+                    <td><a href='./cookies.png' class='name'>cookies.png</a></td>
+                    <td><a href='./cookies.png'>PNG file</a></td>
+                    <td sorttable_customkey='547'><a href='./cookies.png'>547 KB</a></td>
+                    <td sorttable_customkey='1692701725'><a href='./cookies.png'>Aug 22 2023 12:34 PM</a></td>
+                </tr>
+                <tr class='file'>
+                    <td><a href='./cry.png' class='name'>cry.png</a></td>
+                    <td><a href='./cry.png'>PNG file</a></td>
+                    <td sorttable_customkey='523'><a href='./cry.png'>523 KB</a></td>
+                    <td sorttable_customkey='1692701725'><a href='./cry.png'>Aug 22 2023 12:34 PM</a></td>
+                </tr>
+                <tr class='file'>
+                    <td><a href='./drink.png' class='name'>drink.png</a></td>
+                    <td><a href='./drink.png'>PNG file</a></td>
+                    <td sorttable_customkey='531'><a href='./drink.png'>531 KB</a></td>
+                    <td sorttable_customkey='1692701725'><a href='./drink.png'>Aug 22 2023 12:34 PM</a></td>
+                </tr>
+                <tr class='file'>
+                    <td><a href='./GG.png' class='name'>GG.png</a></td>
+                    <td><a href='./GG.png'>PNG file</a></td>
+                    <td sorttable_customkey='522'><a href='./GG.png'>522 KB</a></td>
+                    <td sorttable_customkey='1689969300'><a href='./GG.png'>Jul 21 2023 9:55 PM</a></td>
+                </tr>
+                <tr class='file'>
                     <td><a href='./gun.png' class='name'>gun.png</a></td>
                     <td><a href='./gun.png'>PNG file</a></td>
-                    <td sorttable_customkey='462'><a href='./gun.png'>462 KB</a></td>
+                    <td sorttable_customkey='462'><a href='./gun.png'>613  KB</a></td>
                     <td sorttable_customkey='1689969300'><a href='./gun.png'>Jul 21 2023 9:55 PM</a></td>
+                </tr>
+                <tr class='file'>
+                    <td><a href='./hi.png' class='name'>hi.png</a></td>
+                    <td><a href='./hi.png'>PNG file</a></td>
+                    <td sorttable_customkey='613'><a href='./hi.png'>613 KB</a></td>
+                    <td sorttable_customkey='1692701725'><a href='./hi.png'>Aug 22 2023 12:34 PM</a></td>
                 </tr>
                 <tr class='file'>
                     <td><a href='./laugh new.png' class='name'>laugh new.png</a></td>
@@ -77,10 +119,10 @@ Includes 11 .png files" />
                     <td sorttable_customkey='1689969300'><a href='./laugh.png'>Jul 21 2023 9:55 PM</a></td>
                 </tr>
                 <tr class='file'>
-                    <td><a href='./pray.png' class='name'>pray.png</a></td>
-                    <td><a href='./pray.png'>PNG file</a></td>
-                    <td sorttable_customkey='354'><a href='./pray.png'>354 KB</a></td>
-                    <td sorttable_customkey='1690504600'><a href='./pray.png'>Jul 28 2023 2:37 AM</a></td>
+                    <td><a href='./lurk.png' class='name'>lurk.png</a></td>
+                    <td><a href='./lurk.png'>PNG file</a></td>
+                    <td sorttable_customkey='437'><a href='./lurk.png'>437 KB</a></td>
+                    <td sorttable_customkey='1692701725'><a href='./lurk.png'>Aug 22 2023 12:34 PM</a></td>
                 </tr>
                 <tr class='file'>
                     <td><a href='./ok.png' class='name'>ok.png</a></td>
@@ -89,10 +131,22 @@ Includes 11 .png files" />
                     <td sorttable_customkey='1689969300'><a href='./ok.png'>Jul 21 2023 9:55 PM</a></td>
                 </tr>
                 <tr class='file'>
+                    <td><a href='./peace.png' class='name'>peace.png</a></td>
+                    <td><a href='./peace.png'>PNG file</a></td>
+                    <td sorttable_customkey='558'><a href='./peace.png'>558 KB</a></td>
+                    <td sorttable_customkey='1692701725'><a href='./peace.png'>Aug 22 2023 12:34 PM</a></td>
+                </tr>
+                <tr class='file'>
                     <td><a href='./please.png' class='name'>please.png</a></td>
                     <td><a href='./please.png'>PNG file</a></td>
                     <td sorttable_customkey='575'><a href='./please.png'>575 KB</a></td>
                     <td sorttable_customkey='1690504600'><a href='./please.png'>Jul 21 2023 9:55 PM</a></td>
+                </tr>
+                <tr class='file'>
+                    <td><a href='./pog.png' class='name'>pog.png</a></td>
+                    <td><a href='./pog.png'>PNG file</a></td>
+                    <td sorttable_customkey='413'><a href='./pog.png'>413 KB</a></td>
+                    <td sorttable_customkey='1692701725'><a href='./pog.png'>Aug 22 2023 12:34 PM</a></td>
                 </tr>
                 <tr class='file'>
                     <td><a href='./popcorn.png' class='name'>popcorn.png</a></td>
@@ -123,6 +177,12 @@ Includes 11 .png files" />
                     <td><a href='./think.png'>PNG file</a></td>
                     <td sorttable_customkey='520'><a href='./think.png'>520 KB</a></td>
                     <td sorttable_customkey='1689969300'><a href='./think.png'>Jul 21 2023 9:55 PM</a></td>
+                </tr>
+                <tr class='file'>
+                    <td><a href='./wtf.png' class='name'>wtf.png</a></td>
+                    <td><a href='./wtf.png'>PNG file</a></td>
+                    <td sorttable_customkey='594'><a href='./wtf.png'>594 KB</a></td>
+                    <td sorttable_customkey='1692701725'><a href='./wtf.png'>Aug 22 2023 12:34 PM</a></td>
                 </tr>
             </tbody>
         </table>
