--- a/cdn/downloads/emotes/mercy/112x112/index.html
+++ b/cdn/downloads/emotes/mercy/112x112/index.html
@@ -42,16 +42,28 @@ Includes 11 .png files" />
                     <td sorttable_customkey='1'><a href='../'>N/A</a></td>
                 </tr>
                 <tr class='file'>
-                    <td><a href='./GG.png' class='name'>GG.png</a></td>
-                    <td><a href='./GG.png'>PNG file</a></td>
-                    <td sorttable_customkey='315'><a href='./GG.png'>31.5 KB</a></td>
-                    <td sorttable_customkey='1689969300'><a href='./GG.png'>Jul 21 2023 9:55 PM</a></td>
-                </tr>
-                <tr class='file'>
                     <td><a href='./angry.png' class='name'>angry.png</a></td>
                     <td><a href='./angry.png'>PNG file</a></td>
                     <td sorttable_customkey='314'><a href='./angry.png'>31.4 KB</a></td>
                     <td sorttable_customkey='1689969300'><a href='./angry.png'>Jul 21 2023 9:55 PM</a></td>
+                </tr>
+                <tr class='file'>
+                    <td><a href='./cat.png' class='name'>cat.png</a></td>
+                    <td><a href='./cat.png'>PNG file</a></td>
+                    <td sorttable_customkey='305'><a href='./cat.png'>395 KB</a></td>
+                    <td sorttable_customkey='1692701725'><a href='./cat.png'>Aug 22 2023 12:34 PM</a></td>
+                </tr>
+                <tr class='file'>
+                    <td><a href='./cat.png' class='name'>cat.png</a></td>
+                    <td><a href='./cat.png'>PNG file</a></td>
+                    <td sorttable_customkey='248'><a href='./cat.png'>24.8 KB</a></td>
+                    <td sorttable_customkey='1692701725'><a href='./cat.png'>Aug 22 2023 12:34 PM</a></td>
+                </tr>
+                <tr class='file'>
+                    <td><a href='./cheer.png' class='name'>cheer.png</a></td>
+                    <td><a href='./cheer.png'>PNG file</a></td>
+                    <td sorttable_customkey='334'><a href='./cheer.png'>33.4 KB</a></td>
+                    <td sorttable_customkey='1692701725'><a href='./cheer.png'>Aug 22 2023 12:34 PM</a></td>
                 </tr>
                 <tr class='file'>
                     <td><a href='./clap.png' class='name'>clap.png</a></td>
@@ -60,10 +72,46 @@ Includes 11 .png files" />
                     <td sorttable_customkey='1689969300'><a href='./clap.png'>Jul 21 2023 9:55 PM</a></td>
                 </tr>
                 <tr class='file'>
+                    <td><a href='./comfy.png' class='name'>comfy.png</a></td>
+                    <td><a href='./comfy.png'>PNG file</a></td>
+                    <td sorttable_customkey='282'><a href='./comfy.png'>28.2 KB</a></td>
+                    <td sorttable_customkey='1692701725'><a href='./comfy.png'>Aug 22 2023 12:34 PM</a></td>
+                </tr>
+                <tr class='file'>
+                    <td><a href='./cookies.png' class='name'>cookies.png</a></td>
+                    <td><a href='./cookies.png'>PNG file</a></td>
+                    <td sorttable_customkey='313'><a href='./cookies.png'>31.3 KB</a></td>
+                    <td sorttable_customkey='1692701725'><a href='./cookies.png'>Aug 22 2023 12:34 PM</a></td>
+                </tr>
+                <tr class='file'>
+                    <td><a href='./cry.png' class='name'>cry.png</a></td>
+                    <td><a href='./cry.png'>PNG file</a></td>
+                    <td sorttable_customkey='305'><a href='./cry.png'>30.5 KB</a></td>
+                    <td sorttable_customkey='1692701725'><a href='./cry.png'>Aug 22 2023 12:34 PM</a></td>
+                </tr>
+                <tr class='file'>
+                    <td><a href='./drink.png' class='name'>drink.png</a></td>
+                    <td><a href='./drink.png'>PNG file</a></td>
+                    <td sorttable_customkey='289'><a href='./drink.png'>28.9 KB</a></td>
+                    <td sorttable_customkey='1692701725'><a href='./drink.png'>Aug 22 2023 12:34 PM</a></td>
+                </tr>
+                <tr class='file'>
+                    <td><a href='./GG.png' class='name'>GG.png</a></td>
+                    <td><a href='./GG.png'>PNG file</a></td>
+                    <td sorttable_customkey='315'><a href='./GG.png'>31.5 KB</a></td>
+                    <td sorttable_customkey='1689969300'><a href='./GG.png'>Jul 21 2023 9:55 PM</a></td>
+                </tr>
+                <tr class='file'>
                     <td><a href='./gun.png' class='name'>gun.png</a></td>
                     <td><a href='./gun.png'>PNG file</a></td>
                     <td sorttable_customkey='279'><a href='./gun.png'>27.9 KB</a></td>
                     <td sorttable_customkey='1689969300'><a href='./gun.png'>Jul 21 2023 9:55 PM</a></td>
+                </tr>
+                <tr class='file'>
+                    <td><a href='./hi.png' class='name'>hi.png</a></td>
+                    <td><a href='./hi.png'>PNG file</a></td>
+                    <td sorttable_customkey='324'><a href='./hi.png'>32.4 KB</a></td>
+                    <td sorttable_customkey='1692701725'><a href='./hi.png'>Aug 22 2023 12:34 PM</a></td>
                 </tr>
                 <tr class='file'>
                     <td><a href='./laugh new.png' class='name'>laugh new.png</a></td>
@@ -78,10 +126,22 @@ Includes 11 .png files" />
                     <td sorttable_customkey='1689969300'><a href='./laugh.png'>Jul 21 2023 9:55 PM</a></td>
                 </tr>
                 <tr class='file'>
+                    <td><a href='./lurk.png' class='name'>lurk.png</a></td>
+                    <td><a href='./lurk.png'>PNG file</a></td>
+                    <td sorttable_customkey='287'><a href='./lurk.png'>28.7 KB</a></td>
+                    <td sorttable_customkey='1692701725'><a href='./lurk.png'>Aug 22 2023 12:34 PM</a></td>
+                </tr>
+                <tr class='file'>
                     <td><a href='./ok.png' class='name'>ok.png</a></td>
                     <td><a href='./ok.png'>PNG file</a></td>
                     <td sorttable_customkey='285'><a href='./ok.png'>28.5 KB</a></td>
                     <td sorttable_customkey='1689969300'><a href='./ok.png'>Jul 21 2023 9:55 PM</a></td>
+                </tr>
+                <tr class='file'>
+                    <td><a href='./peace.png' class='name'>peace.png</a></td>
+                    <td><a href='./peace.png'>PNG file</a></td>
+                    <td sorttable_customkey='313'><a href='./peace.png'>31.3 KB</a></td>
+                    <td sorttable_customkey='1692701725'><a href='./peace.png'>Aug 22 2023 12:34 PM</a></td>
                 </tr>
                 <tr class='file'>
                     <td><a href='./please.png' class='name'>please.png</a></td>
@@ -94,6 +154,12 @@ Includes 11 .png files" />
                     <td><a href='./popcorn.png'>PNG file</a></td>
                     <td sorttable_customkey='316'><a href='./popcorn.png'>31.6 KB</a></td>
                     <td sorttable_customkey='1689969300'><a href='./popcorn.png'>Jul 21 2023 9:55 PM</a></td>
+                </tr>
+                <tr class='file'>
+                    <td><a href='./pog.png' class='name'>pog.png</a></td>
+                    <td><a href='./pog.png'>PNG file</a></td>
+                    <td sorttable_customkey='283'><a href='./pog.png'>28.3 KB</a></td>
+                    <td sorttable_customkey='1692701725'><a href='./pog.png'>Aug 22 2023 12:34 PM</a></td>
                 </tr>
                 <tr class='file'>
                     <td><a href='./pray.png' class='name'>pray.png</a></td>
@@ -118,6 +184,12 @@ Includes 11 .png files" />
                     <td><a href='./think.png'>PNG file</a></td>
                     <td sorttable_customkey='296'><a href='./think.png'>29.6 KB</a></td>
                     <td sorttable_customkey='1689969300'><a href='./think.png'>Jul 21 2023 9:55 PM</a></td>
+                </tr>
+                <tr class='file'>
+                    <td><a href='./wtf.png' class='name'>wtf.png</a></td>
+                    <td><a href='./wtf.png'>PNG file</a></td>
+                    <td sorttable_customkey='318'><a href='./wtf.png'>31.8 KB</a></td>
+                    <td sorttable_customkey='1692701725'><a href='./wtf.png'>Aug 22 2023 12:34 PM</a></td>
                 </tr>
             </tbody>
         </table>
