--- a/cdn/downloads/emotes/mercy/28x28/index.html
+++ b/cdn/downloads/emotes/mercy/28x28/index.html
@@ -55,16 +55,58 @@ Includes 11 .png files" />
                     <td sorttable_customkey='1689969300'><a href='./angry.png'>Jul 21 2023 9:55 PM</a></td>
                 </tr>
                 <tr class='file'>
+                    <td><a href='./cat.png' class='name'>cat.png</a></td>
+                    <td><a href='./cat.png'>PNG file</a></td>
+                    <td sorttable_customkey='513'><a href='./cat.png'>5.13 KB</a></td>
+                    <td sorttable_customkey='1692701725'><a href='./cat.png'>Aug 22 2023 12:34 PM</a></td>
+                </tr>
+                <tr class='file'>
+                    <td><a href='./cheer.png' class='name'>cheer.png</a></td>
+                    <td><a href='./cheer.png'>PNG file</a></td>
+                    <td sorttable_customkey='512'><a href='./cheer.png'>5.12 KB</a></td>
+                    <td sorttable_customkey='1692701725'><a href='./cheer.png'>Aug 22 2023 12:34 PM</a></td>
+                </tr>
+                <tr class='file'>
                     <td><a href='./clap.png' class='name'>clap.png</a></td>
                     <td><a href='./clap.png'>PNG file</a></td>
                     <td sorttable_customkey='516'><a href='./clap.png'>5.16 KB</a></td>
                     <td sorttable_customkey='1689969300'><a href='./clap.png'>Jul 21 2023 9:55 PM</a></td>
                 </tr>
                 <tr class='file'>
+                    <td><a href='./comfy.png' class='name'>comfy.png</a></td>
+                    <td><a href='./comfy.png'>PNG file</a></td>
+                    <td sorttable_customkey='513'><a href='./comfy.png'>5.13 KB</a></td>
+                    <td sorttable_customkey='1692701725'><a href='./comfy.png'>Aug 22 2023 12:34 PM</a></td>
+                </tr>
+                <tr class='file'>
+                    <td><a href='./cookies.png' class='name'>cookies.png</a></td>
+                    <td><a href='./cookies.png'>PNG file</a></td>
+                    <td sorttable_customkey='521'><a href='./cookies.png'>5.21 KB</a></td>
+                    <td sorttable_customkey='1692701725'><a href='./cookies.png'>Aug 22 2023 12:34 PM</a></td>
+                </tr>
+                <tr class='file'>
+                    <td><a href='./cry.png' class='name'>cry.png</a></td>
+                    <td><a href='./cry.png'>PNG file</a></td>
+                    <td sorttable_customkey='512'><a href='./cry.png'>5.12 KB</a></td>
+                    <td sorttable_customkey='1692701725'><a href='./cry.png'>Aug 22 2023 12:34 PM</a></td>
+                </tr>
+                <tr class='file'>
+                    <td><a href='./drink.png' class='name'>drink.png</a></td>
+                    <td><a href='./drink.png'>PNG file</a></td>
+                    <td sorttable_customkey='502'><a href='./drink.png'>5.02 KB</a></td>
+                    <td sorttable_customkey='1692701725'><a href='./drink.png'>Aug 22 2023 12:34 PM</a></td>
+                </tr>
+                <tr class='file'>
                     <td><a href='./gun.png' class='name'>gun.png</a></td>
                     <td><a href='./gun.png'>PNG file</a></td>
                     <td sorttable_customkey='505'><a href='./gun.png'>5.05 KB</a></td>
                     <td sorttable_customkey='1689969300'><a href='./gun.png'>Jul 21 2023 9:55 PM</a></td>
+                </tr>
+                <tr class='file'>
+                    <td><a href='./hi.png' class='name'>hi.png</a></td>
+                    <td><a href='./hi.png'>PNG file</a></td>
+                    <td sorttable_customkey='537'><a href='./hi.png'>5.37 KB</a></td>
+                    <td sorttable_customkey='1692701725'><a href='./hi.png'>Aug 22 2023 12:34 PM</a></td>
                 </tr>
                 <tr class='file'>
                     <td><a href='./laugh new.png' class='name'>laugh new.png</a></td>
@@ -75,8 +117,14 @@ Includes 11 .png files" />
                 <tr class='file'>
                     <td><a href='./laugh.png' class='name'>laugh.png</a></td>
                     <td><a href='./laugh.png'>PNG file</a></td>
-                    <td sorttable_customkey='510'><a href='./laugh.png'>5.1 KB</a></td>
+                    <td sorttable_customkey='500'><a href='./laugh.png'>5 KB</a></td>
                     <td sorttable_customkey='1689969300'><a href='./laugh.png'>Jul 21 2023 9:55 PM</a></td>
+                </tr>
+                <tr class='file'>
+                    <td><a href='./lurk.png' class='name'>lurk.png</a></td>
+                    <td><a href='./lurk.png'>PNG file</a></td>
+                    <td sorttable_customkey='512'><a href='./lurk.png'>5.12 KB</a></td>
+                    <td sorttable_customkey='1692701725'><a href='./lurk.png'>Aug 22 2023 12:34 PM</a></td>
                 </tr>
                 <tr class='file'>
                     <td><a href='./ok.png' class='name'>ok.png</a></td>
@@ -85,10 +133,22 @@ Includes 11 .png files" />
                     <td sorttable_customkey='1689969300'><a href='./ok.png'>Jul 21 2023 9:55 PM</a></td>
                 </tr>
                 <tr class='file'>
+                    <td><a href='./peace.png' class='name'>peace.png</a></td>
+                    <td><a href='./peace.png'>PNG file</a></td>
+                    <td sorttable_customkey='524'><a href='./peace.png'>5.24 KB</a></td>
+                    <td sorttable_customkey='1692701725'><a href='./peace.png'>Aug 22 2023 12:34 PM</a></td>
+                </tr>
+                <tr class='file'>
                     <td><a href='./please.png' class='name'>please.png</a></td>
                     <td><a href='./please.png'>PNG file</a></td>
                     <td sorttable_customkey='360'><a href='./please.png'>3.6 KB</a></td>
                     <td sorttable_customkey='1690504600'><a href='./please.png'>Jul 21 2023 9:55 PM</a></td>
+                </tr>
+                <tr class='file'>
+                    <td><a href='./pog.png' class='name'>pog.png</a></td>
+                    <td><a href='./pog.png'>PNG file</a></td>
+                    <td sorttable_customkey='513'><a href='./pog.png'>5.13 KB</a></td>
+                    <td sorttable_customkey='1692701725'><a href='./pog.png'>Aug 22 2023 12:34 PM</a></td>
                 </tr>
                 <tr class='file'>
                     <td><a href='./popcorn.png' class='name'>popcorn.png</a></td>
@@ -119,6 +179,12 @@ Includes 11 .png files" />
                     <td><a href='./think.png'>PNG file</a></td>
                     <td sorttable_customkey='521'><a href='./think.png'>5.21 KB</a></td>
                     <td sorttable_customkey='1689969300'><a href='./think.png'>Jul 21 2023 9:55 PM</a></td>
+                </tr>
+                <tr class='file'>
+                    <td><a href='./wtf.png' class='name'>wtf.png</a></td>
+                    <td><a href='./wtf.png'>PNG file</a></td>
+                    <td sorttable_customkey='530'><a href='./wtf.png'>5.3 KB</a></td>
+                    <td sorttable_customkey='1692701725'><a href='./wtf.png'>Aug 22 2023 12:34 PM</a></td>
                 </tr>
             </tbody>
         </table>
