--- a/cdn/downloads/emotes/mercy/367x367/index.html
+++ b/cdn/downloads/emotes/mercy/367x367/index.html
@@ -44,16 +44,22 @@ Includes 11 .png files" />
                     <td sorttable_customkey='1'><a href='../'>N/A</a></td>
                 </tr>
                 <tr class='file'>
-                    <td><a href='./Thumbs Up.png' class='name'>Thumbs Up.png</a></td>
-                    <td><a href='./Thumbs Up.png'>PNG file</a></td>
-                    <td sorttable_customkey='218'><a href='./Thumbs Up.png'>218 KB</a></td>
-                    <td sorttable_customkey='1689969300'><a href='./Thumbs Up.png'>Jul 21 2023 9:55 PM</a></td>
-                </tr>
-                <tr class='file'>
                     <td><a href='./Angry.png' class='name'>Angry.png</a></td>
                     <td><a href='./Angry.png'>PNG file</a></td>
                     <td sorttable_customkey='238'><a href='./Angry.png'>238 KB</a></td>
                     <td sorttable_customkey='1689969300'><a href='./Angry.png'>Jul 21 2023 9:55 PM</a></td>
+                </tr>
+                <tr class='file'>
+                    <td><a href='./cat.png' class='name'>cat.png</a></td>
+                    <td><a href='./cat.png'>PNG file</a></td>
+                    <td sorttable_customkey='78'><a href='./cat.png'>78.2 KB</a></td>
+                    <td sorttable_customkey='1692701725'><a href='./cat.png'>Aug 22 2023 12:34 PM</a></td>
+                </tr>
+                <tr class='file'>
+                    <td><a href='./cheer.png' class='name'>cheer.png</a></td>
+                    <td><a href='./cheer.png'>PNG file</a></td>
+                    <td sorttable_customkey='119'><a href='./cheer.png'>119 KB</a></td>
+                    <td sorttable_customkey='1692701725'><a href='./cheer.png'>Aug 22 2023 12:34 PM</a></td>
                 </tr>
                 <tr class='file'>
                     <td><a href='./Clap.png' class='name'>Clap.png</a></td>
@@ -62,10 +68,46 @@ Includes 11 .png files" />
                     <td sorttable_customkey='1689969300'><a href='./Clap.png'>Jul 21 2023 9:55 PM</a></td>
                 </tr>
                 <tr class='file'>
+                    <td><a href='./comfy.png' class='name'>comfy.png</a></td>
+                    <td><a href='./comfy.png'>PNG file</a></td>
+                    <td sorttable_customkey='73'><a href='./comfy.png'>73.7 KB</a></td>
+                    <td sorttable_customkey='1692701725'><a href='./comfy.png'>Aug 22 2023 12:34 PM</a></td>
+                </tr>
+                <tr class='file'>
+                    <td><a href='./cookies.png' class='name'>cookies.png</a></td>
+                    <td><a href='./cookies.png'>PNG file</a></td>
+                    <td sorttable_customkey='110'><a href='./cookies.png'>110 KB</a></td>
+                    <td sorttable_customkey='1692701725'><a href='./cookies.png'>Aug 22 2023 12:34 PM</a></td>
+                </tr>
+                <tr class='file'>
+                    <td><a href='./cry.png' class='name'>cry.png</a></td>
+                    <td><a href='./cry.png'>PNG file</a></td>
+                    <td sorttable_customkey='103'><a href='./cry.png'>103 KB</a></td>
+                    <td sorttable_customkey='1692701725'><a href='./cry.png'>Aug 22 2023 12:34 PM</a></td>
+                </tr>
+                <tr class='file'>
+                    <td><a href='./drink.png' class='name'>drink.png</a></td>
+                    <td><a href='./drink.png'>PNG file</a></td>
+                    <td sorttable_customkey='103'><a href='./drink.png'>103 KB</a></td>
+                    <td sorttable_customkey='1692701725'><a href='./drink.png'>Aug 22 2023 12:34 PM</a></td>
+                </tr>
+                <tr class='file'>
                     <td><a href='./Gun.png' class='name'>Gun.png</a></td>
                     <td><a href='./Gun.png'>PNG file</a></td>
                     <td sorttable_customkey='189'><a href='./Gun.png'>189 KB</a></td>
                     <td sorttable_customkey='1689969300'><a href='./Gun.png'>Jul 21 2023 9:55 PM</a></td>
+                </tr>
+                <tr class='file'>
+                    <td><a href='./Heart.png' class='name'>Heart.png</a></td>
+                    <td><a href='./Heart.png'>PNG file</a></td>
+                    <td sorttable_customkey='198'><a href='./Heart.png'>198 KB</a></td>
+                    <td sorttable_customkey='1689969300'><a href='./Heart.png'>Jul 21 2023 9:55 PM</a></td>
+                </tr>
+                <tr class='file'>
+                    <td><a href='./hi.png' class='name'>hi.png</a></td>
+                    <td><a href='./hi.png'>PNG file</a></td>
+                    <td sorttable_customkey='121'><a href='./hi.png'>121 KB</a></td>
+                    <td sorttable_customkey='1692701725'><a href='./hi.png'>Aug 22 2023 12:34 PM</a></td>
                 </tr>
                 <tr class='file'>
                     <td><a href='./Laugh new.png' class='name'>Laugh new.png</a></td>
@@ -80,10 +122,22 @@ Includes 11 .png files" />
                     <td sorttable_customkey='1689969300'><a href='./Laughing.png'>Jul 21 2023 9:55 PM</a></td>
                 </tr>
                 <tr class='file'>
+                    <td><a href='./lurk.png' class='name'>lurk.png</a></td>
+                    <td><a href='./lurk.png'>PNG file</a></td>
+                    <td sorttable_customkey='85'><a href='./lurk.png'>85.1 KB</a></td>
+                    <td sorttable_customkey='1692701725'><a href='./lurk.png'>Aug 22 2023 12:34 PM</a></td>
+                </tr>
+                <tr class='file'>
                     <td><a href='./Ok.png' class='name'>Ok.png</a></td>
                     <td><a href='./Ok.png'>PNG file</a></td>
                     <td sorttable_customkey='201'><a href='./Ok.png'>201 KB</a></td>
                     <td sorttable_customkey='1689969300'><a href='./Ok.png'>Jul 21 2023 9:55 PM</a></td>
+                </tr>
+                <tr class='file'>
+                    <td><a href='./peace.png' class='name'>peace.png</a></td>
+                    <td><a href='./peace.png'>PNG file</a></td>
+                    <td sorttable_customkey='111'><a href='./peace.png'>111 KB</a></td>
+                    <td sorttable_customkey='1692701725'><a href='./peace.png'>Aug 22 2023 12:34 PM</a></td>
                 </tr>
                 <tr class='file'>
                     <td><a href='./please.png' class='name'>please.png</a></td>
@@ -92,10 +146,22 @@ Includes 11 .png files" />
                     <td sorttable_customkey='1690504600'><a href='./please.png'>Jul 21 2023 9:55 PM</a></td>
                 </tr>
                 <tr class='file'>
+                    <td><a href='./pog.png' class='name'>pog.png</a></td>
+                    <td><a href='./pog.png'>PNG file</a></td>
+                    <td sorttable_customkey='80'><a href='./pog.png'>80.1 KB</a></td>
+                    <td sorttable_customkey='1692701725'><a href='./pog.png'>Aug 22 2023 12:34 PM</a></td>
+                </tr>
+                <tr class='file'>
                     <td><a href='./Popcorn.png' class='name'>Popcorn.png</a></td>
                     <td><a href='./Popcorn.png'>PNG file</a></td>
                     <td sorttable_customkey='228'><a href='./Popcorn.png'>228 KB</a></td>
                     <td sorttable_customkey='1689969300'><a href='./Popcorn.png'>Jul 21 2023 9:55 PM</a></td>
+                </tr>
+                <tr class='file'>
+                    <td><a href='./Pout.png' class='name'>Pout.png</a></td>
+                    <td><a href='./Pout.png'>PNG file</a></td>
+                    <td sorttable_customkey='207'><a href='./Pout.png'>207 KB</a></td>
+                    <td sorttable_customkey='1689969300'><a href='./Pout.png'>Jul 21 2023 9:55 PM</a></td>
                 </tr>
                 <tr class='file'>
                     <td><a href='./pray.png' class='name'>pray.png</a></td>
@@ -110,22 +176,22 @@ Includes 11 .png files" />
                     <td sorttable_customkey='1689969300'><a href='./Shock.png'>Jul 21 2023 9:55 PM</a></td>
                 </tr>
                 <tr class='file'>
-                    <td><a href='./Pout.png' class='name'>Pout.png</a></td>
-                    <td><a href='./Pout.png'>PNG file</a></td>
-                    <td sorttable_customkey='207'><a href='./Pout.png'>207 KB</a></td>
-                    <td sorttable_customkey='1689969300'><a href='./Pout.png'>Jul 21 2023 9:55 PM</a></td>
-                </tr>
-                <tr class='file'>
                     <td><a href='./Think.png' class='name'>Think.png</a></td>
                     <td><a href='./Think.png'>PNG file</a></td>
                     <td sorttable_customkey='209'><a href='./Think.png'>209 KB</a></td>
                     <td sorttable_customkey='1689969300'><a href='./Think.png'>Jul 21 2023 9:55 PM</a></td>
                 </tr>
                 <tr class='file'>
-                    <td><a href='./Heart.png' class='name'>Heart.png</a></td>
-                    <td><a href='./Heart.png'>PNG file</a></td>
-                    <td sorttable_customkey='198'><a href='./Heart.png'>198 KB</a></td>
-                    <td sorttable_customkey='1689969300'><a href='./Heart.png'>Jul 21 2023 9:55 PM</a></td>
+                    <td><a href='./Thumbs Up.png' class='name'>Thumbs Up.png</a></td>
+                    <td><a href='./Thumbs Up.png'>PNG file</a></td>
+                    <td sorttable_customkey='218'><a href='./Thumbs Up.png'>218 KB</a></td>
+                    <td sorttable_customkey='1689969300'><a href='./Thumbs Up.png'>Jul 21 2023 9:55 PM</a></td>
+                </tr>
+                <tr class='file'>
+                    <td><a href='./wtf.png' class='name'>wtf.png</a></td>
+                    <td><a href='./wtf.png'>PNG file</a></td>
+                    <td sorttable_customkey='115'><a href='./wtf.png'>115 KB</a></td>
+                    <td sorttable_customkey='1692701725'><a href='./wtf.png'>Aug 22 2023 12:34 PM</a></td>
                 </tr>
             </tbody>
         </table>
