Added an animated emote

--- a/cdn/downloads/emotes/mercy/Animated/index.html
+++ b/cdn/downloads/emotes/mercy/Animated/index.html
@@ -65,7 +65,31 @@ Includes 4 .gif files" />
                     <td sorttable_customkey='5720'><a href='./HEART.gif'>5.72 MB</a></td>
                     <td sorttable_customkey='1689970320'><a href='./HEART.gif'>Jul 21 2023 10:12 PM</a></td>
                 </tr>
+                <tr class='directory'>
+                    <td><a href='./pat(28x).gif' class='name'>pat(28x).gif</a></td>
+                    <td><a href='./pat(28x).gif'>GIF file</a></td>
+                    <td sorttable_customkey='5720'><a href='./pat(28x).gif'>18 KB</a></td>
+                    <td sorttable_customkey='1692872398'><a href='./pat(28x).gif'>Aug 24 2023 12:19 PM</a></td>
+                </tr>
+                <tr class='directory'>
+                    <td><a href='./pat(56x).gif' class='name'>pat(56x).gif</a></td>
+                    <td><a href='./pat(56x).gif'>GIF file</a></td>
+                    <td sorttable_customkey='5720'><a href='./pat(56x).gif'>55 KB</a></td>
+                    <td sorttable_customkey='1692872398'><a href='./pat(56x).gif'>Aug 24 2023 12:19 PM</a></td>
+                </tr>
             </tbody>
+            <tr class='directory'>
+                <td><a href='./pat(112x).gif' class='name'>pat(112x).gif</a></td>
+                <td><a href='./pat(112x).gif'>GIF file</a></td>
+                <td sorttable_customkey='5720'><a href='./pat(112x).gif'>163 KB</a></td>
+                <td sorttable_customkey='1692872398'><a href='./pat(112x).gif'>Aug 24 2023 12:19 PM</a></td>
+            </tr>
+            <tr class='directory'>
+                <td><a href='./pat.gif' class='name'>pat.gif</a></td>
+                <td><a href='./pat.gif'>GIF file</a></td>
+                <td sorttable_customkey='5720'><a href='./pat.gif'>4.36 MB</a></td>
+                <td sorttable_customkey='1692872398'><a href='./pat.gif'>Aug 24 2023 12:19 PM</a></td>
+            </tr>
         </table>
     </div>
     <button id="mode-toggle">
