--- a/cdn/downloads/emotes/mercy/Animated/index.html
+++ b/cdn/downloads/emotes/mercy/Animated/index.html
@@ -11,8 +11,8 @@
     <meta property="og:url" content="http://cdn.lynnux.xyz/downloads/emotes/mercy/Animated" />
     <meta property="og:image" content="https://lynnux.xyz/emotes/assets/images/MyceliaIsOffline.png" />
     <meta property="og:description" content="This page includes the 'lifeguard mercy' chibi emotes, 
-sizes: 56x56 
-Includes 4 .gif files" />
+sizes: 28x28 56x56 112x112 1000x1000
+Includes 8 .gif files" />
     <meta name="theme-color" content="#de403c">
     <meta name="twitter:card" content="summary_large_image">
 
@@ -42,12 +42,6 @@ Includes 4 .gif files" />
                     <td sorttable_customkey='1'><a href='../'>N/A</a></td>
                 </tr>
                 <tr class='file'>
-                    <td><a href='HEART(112x).gif' class='name'>HEART(112x).gif</a></td>
-                    <td><a href='HEART(112x).gif'>GIF file</a></td>
-                    <td sorttable_customkey='229'><a href='HEART(112x).gif'>229 KB</a></td>
-                    <td sorttable_customkey='1689970200'><a href='HEART(112x).gif'>Jul 21 2023 10:10 PM</a></td>
-                </tr>
-                <tr class='file'>
                     <td><a href='./HEART(28x).gif' class='name'>HEART(28x).gif</a></td>
                     <td><a href='./HEART(28x).gif'>GIF file</a></td>
                     <td sorttable_customkey='23'><a href='./HEART(28x).gif'>23 KB</a></td>
@@ -58,6 +52,12 @@ Includes 4 .gif files" />
                     <td><a href='./HEART(56x).gif'>GIF file</a></td>
                     <td sorttable_customkey='77'><a href='./HEART(56x).gif'>77 KB</a></td>
                     <td sorttable_customkey='1689970200'><a href='./HEART(56x).gif'>Jul 21 2023 10:10 PM</a></td>
+                </tr>
+                <tr class='file'>
+                    <td><a href='HEART(112x).gif' class='name'>HEART(112x).gif</a></td>
+                    <td><a href='HEART(112x).gif'>GIF file</a></td>
+                    <td sorttable_customkey='229'><a href='HEART(112x).gif'>229 KB</a></td>
+                    <td sorttable_customkey='1689970200'><a href='HEART(112x).gif'>Jul 21 2023 10:10 PM</a></td>
                 </tr>
                 <tr class='directory'>
                     <td><a href='./HEART.gif' class='name'>HEART.gif</a></td>
