--- a/cdn/downloads/sounds/memes/index.html
+++ b/cdn/downloads/sounds/memes/index.html
@@ -23,7 +23,7 @@ Includes 0 .pm3 files" />
 
 <body>
     <div id="container">
-        <h1>/mercy/28x28</h1>
+        <h1>/sounds/memes</h1>
         <table class="sortable">
             <thead>
                 <tr>
@@ -38,6 +38,7 @@ Includes 0 .pm3 files" />
                 <tr class='directory'>
                     <td><a href='../' class='name'>...</a></td>
                     <td><a href='../'>&lt;GO BACK&gt;</a></td>
+                    <td sorttable_customkey='0'><a href='./its_not_gay_to_like_femboys.mp3'>Na</a></td>
                     <td sorttable_customkey='1'><a href='../'>N/A</a></td>
                     <td sorttable_customkey='1'><a href='../'>N/A</a></td>
                 </tr>
@@ -52,8 +53,29 @@ Includes 0 .pm3 files" />
                     <td><a href='./Happy_my_pillow_cant_talk.mp3' class='name'>Happy_my_pillow_cant_talk.mp3</a></td>
                     <td><a href='./Happy_my_pillow_cant_talk.mp3'>MP3 file</a></td>
                     <td sorttable_customkey='3'><a href='./its_not_gay_to_like_femboys.mp3'>3 sec</a></td>
-                    <td sorttable_customkey='155'><a href='./Happy_my_pillow_cant_talk.mp3'>55 KB</a></td>
+                    <td sorttable_customkey='55'><a href='./Happy_my_pillow_cant_talk.mp3'>55 KB</a></td>
                     <td sorttable_customkey='1692878600'><a href='./Happy_my_pillow_cant_talk.mp3'>Aug 24 2023 2:03 PM</a></td>
+                </tr>
+                <tr class='file'>
+                    <td><a href='./they_have_a_enemy_widow.mp3' class='name'>they_have_a_enemy_widow.mp3</a></td>
+                    <td><a href='./they_have_a_enemy_widow.mp3'>MP3 file</a></td>
+                    <td sorttable_customkey='5'><a href='./they_have_a_enemy_widow.mp3'>5 sec</a></td>
+                    <td sorttable_customkey='80'><a href='./they_have_a_enemy_widow.mp3'>80 KB</a></td>
+                    <td sorttable_customkey='1692878600'><a href='./they_have_a_enemy_widow.mp3'>Aug 24 2023 2:03 PM</a></td>
+                </tr>
+                <tr class='file'>
+                    <td><a href='./I_dont_get_girls.mp3' class='name'>I_dont_get_girls.mp3</a></td>
+                    <td><a href='./I_dont_get_girls.mp3'>MP3 file</a></td>
+                    <td sorttable_customkey='3'><a href='./I_dont_get_girls.mp3'>3 sec</a></td>
+                    <td sorttable_customkey='52'><a href='./I_dont_get_girls.mp3'>52 KB</a></td>
+                    <td sorttable_customkey='1692878600'><a href='./I_dont_get_girls.mp3'>Aug 24 2023 2:03 PM</a></td>
+                </tr>
+                <tr class='file'>
+                    <td><a href='./i_got_dubble_dildo_dragons.mp3' class='name'>i_got_dubble_dildo_dragons.mp3</a></td>
+                    <td><a href='./i_got_dubble_dildo_dragons.mp3'>MP3 file</a></td>
+                    <td sorttable_customkey='6'><a href='./i_got_dubble_dildo_dragons.mp3'>6 sec</a></td>
+                    <td sorttable_customkey='101'><a href='./i_got_dubble_dildo_dragons.mp3'>101 KB</a></td>
+                    <td sorttable_customkey='1692878600'><a href='./i_got_dubble_dildo_dragons.mp3'>Aug 24 2023 2:03 PM</a></td>
                 </tr>
             </tbody>
         </table>
