--- a/cdn/downloads/index.html
+++ b/cdn/downloads/index.html
@@ -37,6 +37,12 @@
                     <td sorttable_customkey='2'><a href='./emotes/'>Jul 21 2023 9:55 PM</a></td>
                 </tr>
                 <tr class='directory'>
+                    <td><a href='./sounds/' class='name'>sounds</a></td>
+                    <td><a href='./sounds/'>&lt;Directory&gt;</a></td>
+                    <td sorttable_customkey='2'><a href='./sounds/'>N/A</a></td>
+                    <td sorttable_customkey='1692878600'><a href='./sounds/'>Aug 24 2023 2:03 PM</a></td>
+                </tr>
+                <tr class='directory'>
                     <td><a href='./zip/' class='name'>zip</a></td>
                     <td><a href='./zip/'>&lt;Directory&gt;</a></td>
                     <td sorttable_customkey='3'><a href='./zip/'>N/A</a></td>
