--- a/cdn/downloads/sounds/index.html
+++ b/cdn/downloads/sounds/index.html
@@ -6,10 +6,10 @@
     <title>Directory Contents</title>
 
     <!-- Discord Embed -->
-    <meta property="og:title" content="Mercy Chibi Emotes" />
+    <meta property="og:title" content="Sounds" />
     <meta property="og:type" content="website" />
     <meta property="og:url" content="http://cdn.lynnux.xyz/downloads" />
-    <meta name="theme-color" content="#91484F">
+    <meta name="theme-color" content="#ff47ff">
     <meta name="twitter:card" content="summary_large_image">
 
     <link rel="stylesheet" href="/style.css">
@@ -20,7 +20,7 @@
 
 <body>
     <div id="container">
-        <h1>downloads/emotes/</h1>
+        <h1>downloads/sounds/</h1>
         <table class="sortable">
             <thead>
                 <tr>
@@ -38,22 +38,16 @@
                     <td sorttable_customkey='1'><a href='../'>N/A</a></td>
                 </tr>
                 <tr class='directory'>
-                    <td><a href='./doomfist/' class='name'>doomfist</a></td>
-                    <td><a href='./doomfist/'>&lt;Directory&gt;</a></td>
-                    <td sorttable_customkey='2'><a href='./Doomfist/'>N/A</a></td>
-                    <td sorttable_customkey='1689968998'><a href='./Doomfist/'>Jul 21 2023 9:50 PM</a></td>
+                    <td><a href='./memes/' class='name'>memes</a></td>
+                    <td><a href='./memes/'>&lt;Directory&gt;</a></td>
+                    <td sorttable_customkey='2'><a href='./memes/'>N/A</a></td>
+                    <td sorttable_customkey='1692878600'><a href='./memes/'>Aug 24 2023 2:03 PM</a></td>
                 </tr>
                 <tr class='directory'>
-                    <td><a href='./mercy' class='name'>mercy</a></td>
-                    <td><a href='./mercy'>&lt;Directory&gt;</a></td>
-                    <td sorttable_customkey='3'><a href='./Mercy'>N/A</a></td>
-                    <td sorttable_customkey='1689969000'><a href='./Mercy'>Jul 21 2023 9:50 PM</a></td>
-                </tr>
-                <tr class='directory'>
-                    <td><a href='./sombra' class='name'>sombra</a></td>
-                    <td><a href='./sombra'>&lt;Directory&gt;</a></td>
-                    <td sorttable_customkey='4'><a href='./sombra'>N/A</a></td>
-                    <td sorttable_customkey='1690462320'><a href='./sombra'>Jul 27 2023 2:53 PM</a></td>
+                    <td><a href='./overwatch/' class='name'>overwatch</a></td>
+                    <td><a href='./overwatch'>&lt;Directory&gt;</a></td>
+                    <td sorttable_customkey='3'><a href='./overwatch'>N/A</a></td>
+                    <td sorttable_customkey='1692878600'><a href='./overwatch/'>Aug 24 2023 2:03 PM</a></td>
                 </tr>
             </tbody>
         </table>
